@@ -39,7 +39,6 @@ import org.wso2.ballerinalang.compiler.semantics.model.symbols.BSymbol;
 import org.wso2.ballerinalang.compiler.semantics.model.symbols.BVarSymbol;
 import org.wso2.ballerinalang.compiler.semantics.model.symbols.Symbols;
 import org.wso2.ballerinalang.compiler.semantics.model.types.BArrayType;
-import org.wso2.ballerinalang.compiler.semantics.model.types.BIntersectionType;
 import org.wso2.ballerinalang.compiler.semantics.model.types.BInvokableType;
 import org.wso2.ballerinalang.compiler.semantics.model.types.BType;
 import org.wso2.ballerinalang.compiler.tree.BLangBlockFunctionBody;
@@ -53,6 +52,7 @@ import org.wso2.ballerinalang.compiler.tree.BLangRecordVariable;
 import org.wso2.ballerinalang.compiler.tree.BLangService;
 import org.wso2.ballerinalang.compiler.tree.BLangSimpleVariable;
 import org.wso2.ballerinalang.compiler.tree.BLangTupleVariable;
+import org.wso2.ballerinalang.compiler.tree.BLangVariable;
 import org.wso2.ballerinalang.compiler.tree.bindingpatterns.BLangBindingPattern;
 import org.wso2.ballerinalang.compiler.tree.bindingpatterns.BLangCaptureBindingPattern;
 import org.wso2.ballerinalang.compiler.tree.clauses.BLangMatchClause;
@@ -102,6 +102,7 @@ import org.wso2.ballerinalang.compiler.tree.statements.BLangReturn;
 import org.wso2.ballerinalang.compiler.tree.statements.BLangSimpleVariableDef;
 import org.wso2.ballerinalang.compiler.tree.statements.BLangStatement;
 import org.wso2.ballerinalang.compiler.tree.statements.BLangTupleVariableDef;
+import org.wso2.ballerinalang.compiler.tree.statements.BLangWhile;
 import org.wso2.ballerinalang.compiler.tree.types.BLangType;
 import org.wso2.ballerinalang.compiler.tree.types.BLangUserDefinedType;
 import org.wso2.ballerinalang.compiler.tree.types.BLangValueType;
@@ -114,7 +115,6 @@ import org.wso2.ballerinalang.util.Lists;
 import java.util.ArrayList;
 import java.util.EnumSet;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.ballerinalang.model.symbols.SymbolOrigin.VIRTUAL;
 
@@ -123,7 +123,10 @@ import static org.ballerinalang.model.symbols.SymbolOrigin.VIRTUAL;
  *
  * @since 0.965.0
  */
-public class ASTBuilderUtil {
+public final class ASTBuilderUtil {
+
+    private ASTBuilderUtil() {
+    }
 
     /**
      * Prepend generated code to given body.
@@ -158,7 +161,7 @@ public class ASTBuilderUtil {
 
     static void appendStatement(BLangStatement stmt, BLangBlockStmt target) {
         int index = 0;
-        if (target.stmts.size() > 0 && target.stmts.get(target.stmts.size() - 1).getKind() == NodeKind.RETURN) {
+        if (!target.stmts.isEmpty() && target.stmts.get(target.stmts.size() - 1).getKind() == NodeKind.RETURN) {
             index = target.stmts.size() - 1;
         }
         target.stmts.add(index, stmt);
@@ -172,7 +175,7 @@ public class ASTBuilderUtil {
     }
 
     private static boolean isValueType(BType type) {
-        return type.tag < TypeTags.JSON;
+        return Types.getReferredType(type).tag < TypeTags.JSON;
     }
 
     static BLangExpression wrapToConversionExpr(BType sourceType, BLangExpression exprToWrap,
@@ -268,6 +271,16 @@ public class ASTBuilderUtil {
         foreach.body = ASTBuilderUtil.createBlockStmt(pos);
         foreach.collection = collectionVarRef;
         return foreach;
+    }
+
+    static BLangWhile createWhile(Location pos,
+                                  BLangExpression condition,
+                                  BLangBlockStmt body) {
+        final BLangWhile whileNode = (BLangWhile) TreeBuilder.createWhileNode();
+        whileNode.pos = pos;
+        whileNode.body = body;
+        whileNode.expr = condition;
+        return whileNode;
     }
 
     static BLangSimpleVariableDef createVariableDefStmt(Location pos, BlockNode target) {
@@ -413,7 +426,8 @@ public class ASTBuilderUtil {
     }
 
     static BLangExpression generateConversionExpr(BLangExpression varRef, BType target, SymbolResolver symResolver) {
-        if (varRef.getBType().tag == target.tag || varRef.getBType().tag > TypeTags.BOOLEAN) {
+        BType varRefType = Types.getImpliedType(varRef.getBType());
+        if (varRefType.tag == Types.getImpliedType(target).tag || varRefType.tag > TypeTags.BOOLEAN) {
             return varRef;
         }
         // Box value using cast expression.
@@ -552,6 +566,21 @@ public class ASTBuilderUtil {
         return variableDef;
     }
 
+    static BLangErrorVariable createErrorVariable(Location pos, BType type, BLangExpression expr,
+                                                  BLangSimpleVariable message, BLangVariable cause,
+                                                  BLangSimpleVariable restDetail,
+                                                  List<BLangErrorVariable.BLangErrorDetailEntry> detail) {
+        final BLangErrorVariable errVariable = (BLangErrorVariable) TreeBuilder.createErrorVariableNode();
+        errVariable.pos = pos;
+        errVariable.setBType(type);
+        errVariable.expr = expr;
+        errVariable.message = message;
+        errVariable.cause =  cause;
+        errVariable.restDetail = restDetail;
+        errVariable.detail = detail;
+        return errVariable;
+    }
+
     static BLangErrorVariableDef createErrorVariableDef(Location pos, BLangErrorVariable variable) {
         final BLangErrorVariableDef variableDef =
                 (BLangErrorVariableDef) TreeBuilder.createErrorVariableDefinitionNode();
@@ -606,7 +635,7 @@ public class ASTBuilderUtil {
         assignableExpr.lhsExpr = lhsExpr;
         assignableExpr.targetType = targetType;
         assignableExpr.setBType(type);
-        assignableExpr.opSymbol = new BOperatorSymbol(names.fromString(assignableExpr.opKind.value()),
+        assignableExpr.opSymbol = new BOperatorSymbol(Names.fromString(assignableExpr.opKind.value()),
                                                       null, targetType, null, opSymPos, VIRTUAL);
         return assignableExpr;
     }
@@ -664,11 +693,9 @@ public class ASTBuilderUtil {
     }
 
     static BLangListConstructorExpr createListConstructorExpr(Location pos, BType type) {
-        if (type.tag == TypeTags.INTERSECTION) {
-            type = ((BIntersectionType) type).effectiveType;
-        }
+        BType referredType = Types.getImpliedType(type);
 
-        if (type.tag != TypeTags.ARRAY && type.tag != TypeTags.TUPLE) {
+        if (referredType.tag != TypeTags.ARRAY && referredType.tag != TypeTags.TUPLE) {
             throw new IllegalArgumentException("Expected a 'BArrayType' instance or a 'BTupleType' instance");
         }
 
@@ -876,7 +903,7 @@ public class ASTBuilderUtil {
 
         dupFuncSymbol.params = invokableSymbol.params.stream()
                 .map(param -> duplicateParamSymbol(param, dupFuncSymbol))
-                .collect(Collectors.toList());
+                .toList();
         if (dupFuncSymbol.restParam != null) {
             dupFuncSymbol.restParam = duplicateParamSymbol(invokableSymbol.restParam, dupFuncSymbol);
         }
