@@ -32,7 +32,6 @@ import java.nio.file.FileSystemAlreadyExistsException;
 import java.nio.file.FileSystems;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Calendar;
 import java.util.Comparator;
@@ -40,7 +39,6 @@ import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import java.util.zip.ZipError;
 
@@ -75,16 +73,17 @@ public class ZipConverter extends PathConverter {
                     pathToZip.getPath() + "!/",
                     pathToZip.getQuery(), pathToZip.getFragment());
             initFS(pathInZip);
-            return Paths.get(pathInZip);
+            return Path.of(pathInZip);
         } catch (URISyntaxException ignore) {
             // This exception occurs when trying to read the bala which is inside the package zip. An exception can
             // occur when creating the URI needed to create the zip file system provider which will be used to read the
             // content inside the zip/jar file. So if such an error occurs, we just return the path to the zip/jar file
             // instead of throwing the exception.
         }
-        return Paths.get(pathToZip);
+        return Path.of(pathToZip);
     }
 
+    @SuppressWarnings("resource")
     private static void initFS(URI uri) {
         Map<String, String> env = new HashMap<>();
         env.put("create", "true");
@@ -114,10 +113,10 @@ public class ZipConverter extends PathConverter {
                             .sorted(Comparator.reverseOrder())
                             .limit(1)
                             .map(SortablePath::getPath)
-                            .collect(Collectors.toList());
+                            .toList();
                 }
                 if (packageID.version.value.isEmpty() && !packageID.orgName.equals(Names.BUILTIN_ORG)
-                        && !packageID.orgName.equals(Names.ANON_ORG) && pathList.size() > 0) {
+                        && !packageID.orgName.equals(Names.ANON_ORG) && !pathList.isEmpty()) {
                     // <org-name>/<module-name>/<version>
                     Path modulePath = pathList.get(0);
                     packageID.version = new Name(modulePath.toFile().getName());
@@ -189,13 +188,15 @@ public class ZipConverter extends PathConverter {
         if (dirPath == null) {
             return;
         }
-        Files.walk(dirPath).sorted(Comparator.reverseOrder()).forEach(path -> {
-            try {
-                Files.delete(path);
-            } catch (IOException e) {
-                //
-            }
-        });
+        try (Stream<Path> paths = Files.walk(dirPath)) {
+            paths.sorted(Comparator.reverseOrder()).forEach(path -> {
+                try {
+                    Files.delete(path);
+                } catch (IOException e) {
+                    //
+                }
+            });
+        }
     }
 
     /**
