@@ -90,15 +90,17 @@ import org.wso2.ballerinalang.compiler.util.Names;
 import org.wso2.ballerinalang.compiler.util.TypeTags;
 import org.wso2.ballerinalang.util.Flags;
 
+import java.util.ArrayDeque;
 import java.util.ArrayList;
+import java.util.Deque;
 import java.util.HashSet;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.Stack;
-import java.util.stream.Collectors;
 
 import static org.ballerinalang.model.symbols.SymbolOrigin.VIRTUAL;
+import static org.ballerinalang.util.diagnostic.DiagnosticErrorCode.INVALID_QUERY_CONSTRUCT_INFERRED_MAP;
+import static org.ballerinalang.util.diagnostic.DiagnosticErrorCode.INVALID_QUERY_CONSTRUCT_TYPE;
 
 /**
  * @since 2201.5.0
@@ -157,8 +159,8 @@ public class QueryTypeChecker extends TypeChecker {
         HashSet<BType> prevCheckedErrorList = commonAnalyzerData.checkedErrorList;
         commonAnalyzerData.checkedErrorList = new HashSet<>();
 
-        Stack<BLangNode> prevQueryFinalClauses = commonAnalyzerData.queryFinalClauses;
-        commonAnalyzerData.queryFinalClauses = new Stack<>();
+        Deque<BLangNode> prevQueryFinalClauses = commonAnalyzerData.queryFinalClauses;
+        commonAnalyzerData.queryFinalClauses = new ArrayDeque<>();
 
         int prevLetCount = commonAnalyzerData.letCount;
         commonAnalyzerData.letCount = 0;
@@ -181,6 +183,7 @@ public class QueryTypeChecker extends TypeChecker {
         if (finalClause.getKind() == NodeKind.SELECT) {
             actualType = resolveQueryType(commonAnalyzerData.queryEnvs.peek(),
                     ((BLangSelectClause) finalClause).expression, data.expType, queryExpr, clauses, data);
+            queryExpr.setDeterminedType(actualType);
             actualType = (actualType == symTable.semanticError) ? actualType : types.checkType(queryExpr.pos,
                     actualType, data.expType, DiagnosticErrorCode.INCOMPATIBLE_TYPES);
         } else {
@@ -189,6 +192,12 @@ public class QueryTypeChecker extends TypeChecker {
             }
             BLangExpression finalClauseExpr = ((BLangCollectClause) finalClause).expression;
             BType queryType = checkExpr(finalClauseExpr, commonAnalyzerData.queryEnvs.peek(), data);
+            List<BType> collectionTypes = getCollectionTypes(clauses);
+            BType completionType = getCompletionType(collectionTypes, Types.QueryConstructType.DEFAULT, data);
+            if (completionType != null) {
+                queryType = BUnionType.create(null, queryType, completionType);
+            }
+            queryExpr.setDeterminedType(queryType);
             actualType = types.checkType(finalClauseExpr.pos, queryType, data.expType,
                     DiagnosticErrorCode.INCOMPATIBLE_TYPES);
         }
@@ -198,7 +207,7 @@ public class QueryTypeChecker extends TypeChecker {
             data.prevEnvs.pop();
         }
 
-        BType referredActualType = Types.getReferredType(actualType);
+        BType referredActualType = Types.getImpliedType(actualType);
         if (referredActualType.tag == TypeTags.TABLE) {
             BTableType tableType = (BTableType) referredActualType;
             tableType.constraintPos = queryExpr.pos;
@@ -230,8 +239,8 @@ public class QueryTypeChecker extends TypeChecker {
         Types.CommonAnalyzerData commonAnalyzerData = data.commonAnalyzerData;
 
         //reset common analyzer data
-        Stack<BLangNode> prevQueryFinalClauses = commonAnalyzerData.queryFinalClauses;
-        commonAnalyzerData.queryFinalClauses = new Stack<>();
+        Deque<BLangNode> prevQueryFinalClauses = commonAnalyzerData.queryFinalClauses;
+        commonAnalyzerData.queryFinalClauses = new ArrayDeque<>();
 
         int prevLetCount = commonAnalyzerData.letCount;
         commonAnalyzerData.letCount = 0;
@@ -273,24 +282,25 @@ public class QueryTypeChecker extends TypeChecker {
         List<BType> safeResultTypes = types.getAllTypes(targetType, true).stream()
                 .filter(t -> !types.isAssignable(t, symTable.errorType))
                 .filter(t -> !types.isAssignable(t, symTable.nilType))
-                .collect(Collectors.toList());
+                .toList();
         // resultTypes will be empty if the targetType is `error?`
         if (safeResultTypes.isEmpty()) {
-            safeResultTypes.add(symTable.noType);
+            safeResultTypes = List.of(symTable.noType);
         }
         BType actualType = symTable.semanticError;
         List<BType> selectTypes = new ArrayList<>();
         List<BType> resolvedTypes = new ArrayList<>();
         BType selectType;
         BLangExpression collectionNode = (BLangExpression) ((BLangFromClause) clauses.get(0)).getCollection();
-        for (BType type : safeResultTypes) {
-            solveSelectTypeAndResolveType(queryExpr, selectExp, type, collectionNode.getBType(), selectTypes,
-                    resolvedTypes, env, data, false);
-        }
+        solveSelectTypeAndResolveType(queryExpr, selectExp, safeResultTypes, collectionNode.getBType(), selectTypes,
+                resolvedTypes, env, data, false);
+
         if (selectTypes.size() == 1) {
+            selectType = selectTypes.get(0);
+            checkExpr(selectExp, env, selectType, data);
             List<BType> collectionTypes = getCollectionTypes(clauses);
             BType completionType = getCompletionType(collectionTypes, types.getQueryConstructType(queryExpr), data);
-            selectType = selectTypes.get(0);
+
             if (queryExpr.isStream) {
                 return new BStreamType(TypeTags.STREAM, selectType, completionType, null);
             } else if (queryExpr.isTable) {
@@ -322,86 +332,161 @@ public class QueryTypeChecker extends TypeChecker {
         }
     }
 
-    void solveSelectTypeAndResolveType(BLangQueryExpr queryExpr, BLangExpression selectExp, BType expType,
+    void solveSelectTypeAndResolveType(BLangQueryExpr queryExpr, BLangExpression selectExp, List<BType> expTypes,
                                        BType collectionType, List<BType> selectTypes, List<BType> resolvedTypes,
                                        SymbolEnv env, TypeChecker.AnalyzerData data, boolean isReadonly) {
-        BType selectType, resolvedType;
-        BType type = Types.getReferredType(expType);
-        switch (type.tag) {
-            case TypeTags.ARRAY:
-                BType elementType = ((BArrayType) type).eType;
-                selectType = checkExpr(selectExp, env, elementType, data);
-                BType queryResultType = new BArrayType(selectType);
-                resolvedType = getResolvedType(queryResultType, type, isReadonly, env);
-                break;
-            case TypeTags.TABLE:
-                selectType = checkExpr(selectExp, env, types.getSafeType(((BTableType) type).constraint,
-                        true, true), data);
-                resolvedType = getResolvedType(symTable.tableType, type, isReadonly, env);
-                break;
-            case TypeTags.STREAM:
-                selectType = checkExpr(selectExp, env, types.getSafeType(((BStreamType) type).constraint,
-                        true, true), data);
-                resolvedType = symTable.streamType;
-                break;
-            case TypeTags.MAP:
-                List<BTupleMember> memberTypeList = new ArrayList<>(2);
-                BVarSymbol stringVarSymbol = new BVarSymbol(0, null, null,
-                        symTable.semanticError, null, symTable.builtinPos, SymbolOrigin.VIRTUAL);
-                memberTypeList.add(new BTupleMember(symTable.stringType, stringVarSymbol));
-                BType memberType = ((BMapType) type).getConstraint();
-                BVarSymbol varSymbol = Symbols.createVarSymbolForTupleMember(memberType);
-                memberTypeList.add(new BTupleMember(memberType, varSymbol));
-                BTupleType newExpType = new BTupleType(null, memberTypeList);
-                selectType = checkExpr(selectExp, env, newExpType, data);
-                resolvedType = getResolvedType(selectType, type, isReadonly, env);
-                break;
-            case TypeTags.STRING:
-                selectType = checkExpr(selectExp, env, type, data);
-                resolvedType = symTable.stringType;
-                break;
-            case TypeTags.XML:
-            case TypeTags.XML_COMMENT:
-            case TypeTags.XML_ELEMENT:
-            case TypeTags.XML_PI:
-            case TypeTags.XML_TEXT:
-                selectType = checkExpr(selectExp, env, type, data);
-                if (types.isAssignable(selectType, symTable.xmlType)) {
-                    resolvedType = getResolvedType(new BXMLType(selectType, null), type, isReadonly, env);
-                } else {
-                    resolvedType = selectType;
+        LinkedHashSet<BType> possibleSelectTypes = new LinkedHashSet<>();
+        List<BType> possibleResolvedTypes = new ArrayList<>();
+        LinkedHashSet<BType> errorTypes = new LinkedHashSet<>();
+        for (BType expType : expTypes) {
+            BType selectType, resolvedType;
+            BType type = Types.getReferredType(expType);
+            switch (type.tag) {
+                case TypeTags.ARRAY:
+                    BType elementType = ((BArrayType) type).eType;
+                    selectType = checkExprSilent(selectExp, env, elementType, data);
+                    if (selectType == symTable.semanticError) {
+                        errorTypes.add(elementType);
+                        continue;
+                    }
+                    BType queryResultType = new BArrayType(selectType);
+                    resolvedType = getResolvedType(queryResultType, type, isReadonly, env);
+                    break;
+                case TypeTags.TABLE:
+                    BType tableConstraint = types.getSafeType(((BTableType) type).constraint,
+                            true, true);
+                    selectType = checkExprSilent(selectExp, env, tableConstraint, data);
+                    if (selectType == symTable.semanticError) {
+                        errorTypes.add(tableConstraint);
+                        continue;
+                    }
+                    resolvedType = getResolvedType(symTable.tableType, type, isReadonly, env);
+                    break;
+                case TypeTags.STREAM:
+                    BType streamConstraint = types.getSafeType(((BStreamType) type).constraint,
+                            true, true);
+                    selectType = checkExprSilent(selectExp, env, streamConstraint, data);
+                    if (selectType == symTable.semanticError) {
+                        errorTypes.add(streamConstraint);
+                        continue;
+                    }
+                    resolvedType = symTable.streamType;
+                    break;
+                case TypeTags.MAP:
+                    List<BTupleMember> memberTypeList = new ArrayList<>(2);
+                    BVarSymbol stringVarSymbol = new BVarSymbol(0, null, null,
+                            symTable.semanticError, null, symTable.builtinPos, SymbolOrigin.VIRTUAL);
+                    memberTypeList.add(new BTupleMember(symTable.stringType, stringVarSymbol));
+                    BType memberType = ((BMapType) type).getConstraint();
+                    BVarSymbol varSymbol = Symbols.createVarSymbolForTupleMember(memberType);
+                    memberTypeList.add(new BTupleMember(memberType, varSymbol));
+                    BTupleType newExpType = new BTupleType(null, memberTypeList);
+                    selectType = checkExprSilent(selectExp, env, newExpType, data);
+                    if (selectType == symTable.semanticError) {
+                        errorTypes.add(newExpType);
+                        continue;
+                    }
+                    resolvedType = getResolvedType(selectType, type, isReadonly, env);
+                    break;
+                case TypeTags.STRING:
+                case TypeTags.XML:
+                case TypeTags.XML_COMMENT:
+                case TypeTags.XML_ELEMENT:
+                case TypeTags.XML_PI:
+                case TypeTags.XML_TEXT:
+                    selectType = checkExprSilent(selectExp, env, type, data);
+                    if (selectType == symTable.semanticError) {
+                        errorTypes.add(type);
+                        continue;
+                    }
+
+                    BType refSelectType = Types.getReferredType(selectType);
+                    if (TypeTags.isXMLTypeTag(refSelectType.tag) || TypeTags.isStringTypeTag(refSelectType.tag)) {
+                        selectType = type;
+                    }
+
+                    if (types.isAssignable(selectType, symTable.xmlType)) {
+                        resolvedType = getResolvedType(new BXMLType(selectType, null), type, isReadonly, env);
+                    } else {
+                        resolvedType = selectType;
+                    }
+                    break;
+                case TypeTags.INTERSECTION:
+                    type = ((BIntersectionType) type).effectiveType;
+                    solveSelectTypeAndResolveType(queryExpr, selectExp, List.of(type), collectionType, selectTypes,
+                            resolvedTypes, env, data, Symbols.isFlagOn(type.flags, Flags.READONLY));
+                    return;
+                case TypeTags.NONE:
+                default:
+                    // contextually expected type not given (i.e var).
+                    BType inferredSelectType = symTable.semanticError;
+                    selectType = checkExprSilent(selectExp, env, type, data);
+                    if (type != symTable.noType) {
+                        inferredSelectType = checkExprSilent(selectExp, env, symTable.noType, data);
+                    }
+
+                    if (selectType != symTable.semanticError && inferredSelectType != symTable.semanticError
+                            && inferredSelectType != symTable.noType) {
+                        selectType = types.getTypeIntersection(
+                                Types.IntersectionContext.typeTestIntersectionCalculationContext(),
+                                selectType, inferredSelectType, env);
+                    } else {
+                        BType checkedType = symTable.semanticError;
+                        if (selectType == symTable.semanticError) {
+                            checkedType = checkExpr(selectExp, env, data);
+                        }
+
+                        if (checkedType != symTable.semanticError && expTypes.size() == 1) {
+                            selectType = checkedType;
+                        }
+                    }
+
+                    if (queryExpr.isMap) { // A query-expr that constructs a mapping must start with the map keyword.
+                        resolvedType = symTable.mapType;
+                    } else if (queryExpr.isStream) {
+                        resolvedType = symTable.streamType;
+                    } else {
+                        resolvedType = getNonContextualQueryType(selectType, collectionType, selectExp.pos);
+                    }
+                    break;
+            }
+            if (selectType != symTable.semanticError) {
+
+                if (resolvedType.tag == TypeTags.STREAM) {
+                    queryExpr.isStream = true;
                 }
-                break;
-            case TypeTags.INTERSECTION:
-                type = ((BIntersectionType) type).effectiveType;
-                solveSelectTypeAndResolveType(queryExpr, selectExp, type, collectionType, selectTypes,
-                        resolvedTypes, env, data, Symbols.isFlagOn(type.flags, Flags.READONLY));
-                return;
-            case TypeTags.NONE:
-            default:
-                // contextually expected type not given (i.e var).
-                selectType = checkExprSilent(nodeCloner.cloneNode(selectExp), type, data);
-                if (selectType != symTable.semanticError) {
-                    selectType = checkExpr(selectExp, env, type, data);
-                }  else {
-                    selectType = checkExpr(selectExp, env, data);
+                if (resolvedType.tag == TypeTags.TABLE) {
+                    queryExpr.isTable = true;
                 }
-                if (queryExpr.isMap) { // A query-expr that constructs a mapping must start with the map keyword.
-                    resolvedType = symTable.mapType;
-                } else {
-                    resolvedType = getNonContextualQueryType(selectType, collectionType);
-                }
-                break;
+                possibleSelectTypes.add(selectType);
+                possibleResolvedTypes.add(resolvedType);
+            }
         }
-        if (selectType != symTable.semanticError) {
-            if (resolvedType.tag == TypeTags.STREAM) {
-                queryExpr.isStream = true;
+        if (!possibleSelectTypes.isEmpty() && !possibleResolvedTypes.isEmpty()) {
+            selectTypes.addAll(possibleSelectTypes);
+            resolvedTypes.addAll(possibleResolvedTypes);
+            return;
+        }
+        if (!errorTypes.isEmpty()) {
+            if (errorTypes.size() > 1) {
+                BType actualQueryType = silentTypeCheckExpr(queryExpr, symTable.noType, data);
+                if (actualQueryType != symTable.semanticError) {
+                    types.checkType(queryExpr, actualQueryType,
+                            BUnionType.create(null, new LinkedHashSet<>(expTypes)));
+                    errorTypes.forEach(expType -> {
+                        if (expType.tag == TypeTags.UNION) {
+                            checkExpr(nodeCloner.cloneNode(selectExp), env, expType, data);
+                        }
+                    });
+                    checkExpr(selectExp, env, data);
+                    return;
+                }
             }
-            if (resolvedType.tag == TypeTags.TABLE) {
-                queryExpr.isTable = true;
-            }
-            selectTypes.add(selectType);
-            resolvedTypes.add(resolvedType);
+            errorTypes.forEach(expType -> {
+                selectExp.typeChecked = false;
+                checkExpr(selectExp, env, expType, data);
+            });
+            selectExp.typeChecked = true;
         }
     }
 
@@ -411,7 +496,7 @@ public class QueryTypeChecker extends TypeChecker {
             validateKeySpecifier(queryExpr.fieldNameIdentifierList, constraintType);
             markReadOnlyForConstraintType(constraintType);
             tableType.fieldNameList = queryExpr.fieldNameIdentifierList.stream()
-                    .map(identifier -> ((BLangIdentifier) identifier).value).collect(Collectors.toList());
+                    .map(identifier -> ((BLangIdentifier) identifier).value).toList();
         }
         if (Symbols.isFlagOn(resolvedType.flags, Flags.READONLY)) {
             return ImmutableTypeCloner.getImmutableIntersectionType(null, types,
@@ -449,7 +534,7 @@ public class QueryTypeChecker extends TypeChecker {
     }
 
     private BType getTypeOfTypeParameter(BType selectType, Location pos) {
-        BType referredType = Types.getReferredType(selectType);
+        BType referredType = Types.getImpliedType(selectType);
         if (referredType.tag == TypeTags.INTERSECTION) {
             referredType = ((BIntersectionType) referredType).effectiveType;
         }
@@ -495,16 +580,14 @@ public class QueryTypeChecker extends TypeChecker {
             if (collectionType.tag == TypeTags.SEMANTIC_ERROR) {
                 return null;
             }
-            collectionType = Types.getReferredType(collectionType);
+            collectionType = Types.getImpliedType(collectionType);
             switch (collectionType.tag) {
-                case TypeTags.STREAM:
+                case TypeTags.STREAM -> {
                     completionType = ((BStreamType) collectionType).completionType;
                     returnType = completionType;
-                    break;
-                case TypeTags.OBJECT:
-                    returnType = types.getVarTypeFromIterableObject((BObjectType) collectionType);
-                    break;
-                default:
+                }
+                case TypeTags.OBJECT -> returnType = types.getVarTypeFromIterableObject((BObjectType) collectionType);
+                default -> {
                     BSymbol itrSymbol = symResolver.lookupLangLibMethod(collectionType,
                             Names.fromString(BLangCompilerConstants.ITERABLE_COLLECTION_ITERATOR_FUNC), data.env);
                     if (itrSymbol == this.symTable.notFoundSymbol) {
@@ -512,7 +595,8 @@ public class QueryTypeChecker extends TypeChecker {
                     }
                     BInvokableSymbol invokableSymbol = (BInvokableSymbol) itrSymbol;
                     returnType = types.getResultTypeOfNextInvocation(
-                            (BObjectType) Types.getReferredType(invokableSymbol.retType));
+                            (BObjectType) Types.getImpliedType(invokableSymbol.retType));
+                }
             }
             if (returnType != null) {
                 if (queryConstructType == Types.QueryConstructType.STREAM ||
@@ -558,7 +642,7 @@ public class QueryTypeChecker extends TypeChecker {
         return clauses.stream()
                 .filter(clause -> (clause.getKind() == NodeKind.FROM || clause.getKind() == NodeKind.JOIN))
                 .map(clause -> ((BLangInputClause) clause).collection.getBType())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private BType getResolvedType(BType initType, BType expType, boolean isReadonly, SymbolEnv env) {
@@ -570,30 +654,44 @@ public class QueryTypeChecker extends TypeChecker {
         return initType;
     }
 
-    private BType getNonContextualQueryType(BType staticType, BType basicType) {
-        BType resultType;
-        switch (Types.getReferredType(basicType).tag) {
+    private BType getNonContextualQueryType(BType constraintType, BType basicType, Location pos) {
+        switch (Types.getImpliedType(basicType).tag) {
             case TypeTags.TABLE:
-                resultType = symTable.tableType;
+                if (types.isAssignable(constraintType, symTable.mapAllType)) {
+                    return symTable.tableType;
+                }
                 break;
             case TypeTags.STREAM:
-                resultType = symTable.streamType;
-                break;
+// todo: Depends on https://github.com/ballerina-platform/ballerina-spec/issues/1252 decision
+//                dlog.error(pos, INVALID_QUERY_CONSTRUCT_INFERRED_STREAM);
+//                return symTable.semanticError;
+                return symTable.streamType;
+            case TypeTags.MAP:
+                dlog.error(pos, INVALID_QUERY_CONSTRUCT_INFERRED_MAP);
+                return symTable.semanticError;
             case TypeTags.XML:
-                resultType = new BXMLType(staticType, null);
+                if (types.isSubTypeOfBaseType(constraintType, symTable.xmlType.tag)) {
+                    return new BXMLType(constraintType, null);
+                }
                 break;
             case TypeTags.STRING:
-                resultType = symTable.stringType;
+                if (types.isSubTypeOfBaseType(constraintType, TypeTags.STRING)) {
+                    return symTable.stringType;
+                }
                 break;
+            case TypeTags.ARRAY:
+            case TypeTags.TUPLE:
+            case TypeTags.OBJECT:
+                return new BArrayType(constraintType);
             default:
-                resultType = new BArrayType(staticType);
-                break;
+                return symTable.semanticError;
         }
-        return resultType;
+        dlog.error(pos, INVALID_QUERY_CONSTRUCT_TYPE, basicType, constraintType);
+        return symTable.semanticError;
     }
 
     private boolean validateTableType(BTableType tableType, TypeChecker.AnalyzerData data) {
-        BType constraint = Types.getReferredType(tableType.constraint);
+        BType constraint = Types.getImpliedType(tableType.constraint);
         if (tableType.isTypeInlineDefined && !types.isAssignable(constraint, symTable.mapAllType)) {
             dlog.error(tableType.constraintPos, DiagnosticErrorCode.TABLE_CONSTRAINT_INVALID_SUBTYPE, constraint);
             data.resultType = symTable.semanticError;
@@ -865,6 +963,7 @@ public class QueryTypeChecker extends TypeChecker {
         }
     }
 
+    @Override
     public void visit(BLangInvocation iExpr, TypeChecker.AnalyzerData data) {
         if (!hasSequenceArgs(iExpr, data)) {
             super.visit(iExpr, data);
@@ -945,7 +1044,7 @@ public class QueryTypeChecker extends TypeChecker {
                 }
             }
         }
-        BInvokableType bInvokableType = (BInvokableType) Types.getReferredType(functionSymbol.type);
+        BInvokableType bInvokableType = (BInvokableType) Types.getImpliedType(functionSymbol.type);
         BType retType = typeParamAnalyzer.getReturnTypeParams(data.env, bInvokableType.getReturnType());
         data.resultType = types.checkType(iExpr, retType, data.expType);
     }
@@ -954,7 +1053,7 @@ public class QueryTypeChecker extends TypeChecker {
     private boolean isNilReturnInvocationInCollectClause(BLangInvocation invocation, TypeChecker.AnalyzerData data) {
         BInvokableSymbol symbol = (BInvokableSymbol) invocation.symbol;
         return symbol != null && symbol.restParam != null
-                && symbol.params.size() > 0 && invocation.argExprs.size() == 1 && invocation.restArgs.size() == 1;
+                && !symbol.params.isEmpty() && invocation.argExprs.size() == 1 && invocation.restArgs.size() == 1;
     }
 
     // Check the argument within sequence context.
@@ -976,6 +1075,7 @@ public class QueryTypeChecker extends TypeChecker {
         data.queryData.withinSequenceContext = false;
     }
 
+    @Override
     public void visit(BLangCollectContextInvocation collectContextInvocation, TypeChecker.AnalyzerData data) {
         BLangInvocation invocation = collectContextInvocation.invocation;
         data.resultType = checkExpr(invocation, data.env, data);
@@ -985,6 +1085,7 @@ public class QueryTypeChecker extends TypeChecker {
         collectContextInvocation.setBType(data.resultType);
     }
 
+    @Override
     public void visit(BLangSimpleVarRef varRefExpr, TypeChecker.AnalyzerData data) {
         // Set error type as the actual type.
         BType actualType = symTable.semanticError;
@@ -1054,7 +1155,7 @@ public class QueryTypeChecker extends TypeChecker {
                 BConstantSymbol constSymbol = (BConstantSymbol) symbol;
                 varRefExpr.symbol = constSymbol;
                 BType symbolType = symbol.type;
-                BType expectedType = Types.getReferredType(data.expType);
+                BType expectedType = Types.getImpliedType(data.expType);
                 if (symbolType != symTable.noType && expectedType.tag == TypeTags.FINITE ||
                         (expectedType.tag == TypeTags.UNION && types.getAllTypes(expectedType, true).stream()
                                 .anyMatch(memType -> memType.tag == TypeTags.FINITE &&
