@@ -32,7 +32,7 @@ import java.util.function.Supplier;
 
 /**
  * Command executor for running a Ballerina file. Each project at most has a single instance running at a time.
- * See {@link org.ballerinalang.langserver.command.executors.StopExecutor} for stopping a running instance.
+ * See {@link StopExecutor} for stopping a running instance.
  *
  * @since 2201.6.0
  */
@@ -60,27 +60,19 @@ public class RunExecutor implements LSCommandExecutor {
     }
 
     public void listenOutputAsync(ExtendedLanguageClient client, Supplier<InputStream> getInputStream, String channel) {
-        Thread thread = new Thread(() -> listenOutput(client, getInputStream, channel));
-        thread.setDaemon(true);
-        thread.start();
+        Thread.startVirtualThread(() -> listenOutput(client, getInputStream, channel));
     }
 
     private static void listenOutput(ExtendedLanguageClient client, Supplier<InputStream> inSupplier, String channel) {
-        InputStream in = inSupplier.get();
-        try { // Can't use resource style due to SpotBugs bug.
+        try (InputStream in = inSupplier.get()) {
             byte[] buffer = new byte[1024];
             int count;
-            while ((count = in.read(buffer)) > 0) {
+            while ((count = in.read(buffer)) >= 0) {
                 String str = new String(buffer, 0, count, StandardCharsets.UTF_8);
                 client.logTrace(new LogTraceParams(str, channel));
             }
         } catch (IOException ignored) {
-        } finally {
-            try {
-                in.close();
-            } catch (IOException ignored) {
-                // ignore
-            }
+            // ignore
         }
         client.logTrace(new LogTraceParams("", "stopped"));
     }
