@@ -36,6 +36,7 @@ import org.ballerinalang.langserver.common.utils.PositionUtil;
 import org.ballerinalang.langserver.commons.BallerinaCompletionContext;
 import org.ballerinalang.langserver.commons.LanguageServerContext;
 import org.ballerinalang.langserver.commons.completion.LSCompletionItem;
+import org.ballerinalang.langserver.completions.CompletionSearchProvider;
 import org.ballerinalang.langserver.completions.SnippetCompletionItem;
 import org.ballerinalang.langserver.completions.providers.AbstractCompletionProvider;
 import org.ballerinalang.langserver.completions.util.Snippet;
@@ -89,7 +90,7 @@ public class ImportDeclarationNodeContext extends AbstractCompletionProvider<Imp
          */
         List<IdentifierToken> moduleName = node.moduleName().stream()
                 .filter(token -> !token.isMissing())
-                .collect(Collectors.toList());
+                .toList();
 
         ArrayList<LSCompletionItem> completionItems = new ArrayList<>();
         ContextScope contextScope;
@@ -219,8 +220,8 @@ public class ImportDeclarationNodeContext extends AbstractCompletionProvider<Imp
         List<LSPackageLoader.ModuleInfo> moduleList =
                 LSPackageLoader.getInstance(ctx.languageServercontext()).getAllVisiblePackages(ctx);
         moduleList.forEach(pkg -> {
-            String orgName = pkg.packageOrg().value();
-            String pkgName = pkg.packageName().value();
+            String orgName = pkg.packageOrg();
+            String pkgName = pkg.packageName();
             if (orgName.equals(Names.BALLERINA_INTERNAL_ORG.getValue())
                     || ModuleUtil.matchingImportedModule(ctx, pkg).isPresent()) {
                 // Avoid suggesting the ballerinai org name
@@ -229,8 +230,8 @@ public class ImportDeclarationNodeContext extends AbstractCompletionProvider<Imp
             List<String> pkgNameComps = Arrays.stream(pkgName.split("\\."))
                     .map(ModuleUtil::escapeModuleName)
                     .map(CommonUtil::escapeReservedKeyword)
-                    .collect(Collectors.toList());
-            String label = pkg.packageOrg().value().isEmpty() ? String.join(".", pkgNameComps)
+                    .toList();
+            String label = pkg.packageOrg().isEmpty() ? String.join(".", pkgNameComps)
                     : CommonUtil.getPackageLabel(pkg);
             String insertText = orgName.isEmpty() ? "" : orgName + Names.ORG_NAME_SEPARATOR.getValue();
 
@@ -263,7 +264,7 @@ public class ImportDeclarationNodeContext extends AbstractCompletionProvider<Imp
          */
         List<String> modNameString = moduleName.stream()
                 .map(token -> token.text().replace("'", ""))
-                .collect(Collectors.toList());
+                .toList();
         Optional<Project> currentProject = context.workspace().project(context.filePath());
         if (currentProject.isEmpty() || currentProject.get().kind() == ProjectKind.SINGLE_FILE_PROJECT
                 || !modNameString.get(0).equals(pkgName)) {
@@ -318,12 +319,29 @@ public class ImportDeclarationNodeContext extends AbstractCompletionProvider<Imp
         ArrayList<LSCompletionItem> completionItems = new ArrayList<>();
         List<String> addedPkgNames = new ArrayList<>();
         LanguageServerContext serverContext = context.languageServercontext();
-        List<LSPackageLoader.ModuleInfo> moduleList =
-                LSPackageLoader.getInstance(serverContext).getAllVisiblePackages(context);
+        List<LSPackageLoader.ModuleInfo> moduleList;
+
+        if (orgName.equals("ballerinax")) {
+            List<String> packageList = new ArrayList<>();
+            String prefix = node.moduleName().stream().filter(identifierToken -> !identifierToken.isMissing())
+                    .map(IdentifierToken::text)
+                    .collect(Collectors.joining("."));
+
+            moduleList = LSPackageLoader.getInstance(serverContext).getCentralPackages();
+            moduleList.forEach(ballerinaPackage -> packageList.add(ballerinaPackage.packageName()));
+            List<String> filteredPackageNames = getFilteredPackages(packageList, prefix, context);
+            for (String filteredPackage : filteredPackageNames) {
+                LSCompletionItem completionItem = getImportCompletion(context, filteredPackage, filteredPackage);
+                completionItem.getCompletionItem().setAdditionalTextEdits(additionalEdits);
+                completionItems.add(completionItem);
+            }
+            return completionItems;
+        }
+        moduleList = LSPackageLoader.getInstance(serverContext).getAllVisiblePackages(context);
         moduleList.forEach(ballerinaPackage -> {
-            String packageName = ballerinaPackage.packageName().value();
+            String packageName = ballerinaPackage.packageName();
             String insertText;
-            if (orgName.equals(ballerinaPackage.packageOrg().value()) && !addedPkgNames.contains(packageName)
+            if (orgName.equals(ballerinaPackage.packageOrg()) && !addedPkgNames.contains(packageName)
                     && ModuleUtil.matchingImportedModule(context, ballerinaPackage).isEmpty()) {
                 if (orgName.equals(Names.BALLERINA_ORG.value)
                         && packageName.startsWith(Names.LANG.getValue() + Names.DOT.getValue())) {
@@ -332,7 +350,7 @@ public class ImportDeclarationNodeContext extends AbstractCompletionProvider<Imp
                     insertText = packageName;
                 }
                 addedPkgNames.add(packageName);
-                // Do not add the semi colon at the end of the insert text since the user might type the as keyword
+                // Do not add the semicolon at the end of the insert text since the user might type the as keyword
                 LSCompletionItem completionItem = getImportCompletion(context, packageName, insertText);
                 completionItem.getCompletionItem().setAdditionalTextEdits(additionalEdits);
                 completionItems.add(completionItem);
@@ -340,6 +358,15 @@ public class ImportDeclarationNodeContext extends AbstractCompletionProvider<Imp
         });
 
         return completionItems;
+    }
+
+
+    private static List<String> getFilteredPackages(List<String> packageList, String prefix,
+                                                   BallerinaCompletionContext context) {
+        CompletionSearchProvider completionSearchProvider = CompletionSearchProvider
+                .getInstance(context.languageServercontext());
+        completionSearchProvider.indexNames(packageList);
+        return completionSearchProvider.getSuggestions(prefix);
     }
 
     private boolean onSuggestAsKeyword(BallerinaCompletionContext context, ImportDeclarationNode node) {
