@@ -23,7 +23,10 @@ import io.ballerina.compiler.api.symbols.TypeDescKind;
 import io.ballerina.compiler.api.symbols.TypeReferenceTypeSymbol;
 import io.ballerina.compiler.api.symbols.TypeSymbol;
 import io.ballerina.compiler.api.symbols.UnionTypeSymbol;
+import io.ballerina.compiler.syntax.tree.Node;
 import io.ballerina.compiler.syntax.tree.QualifiedNameReferenceNode;
+import io.ballerina.compiler.syntax.tree.SimpleNameReferenceNode;
+import io.ballerina.compiler.syntax.tree.SyntaxKind;
 import io.ballerina.compiler.syntax.tree.Token;
 import io.ballerina.compiler.syntax.tree.TypeTestExpressionNode;
 import io.ballerina.projects.Module;
@@ -38,13 +41,13 @@ import org.ballerinalang.langserver.completions.SymbolCompletionItem;
 import org.ballerinalang.langserver.completions.TypeCompletionItem;
 import org.ballerinalang.langserver.completions.builder.TypeCompletionItemBuilder;
 import org.ballerinalang.langserver.completions.providers.AbstractCompletionProvider;
+import org.ballerinalang.langserver.completions.util.CompletionUtil;
 import org.ballerinalang.langserver.completions.util.QNameRefCompletionUtil;
 import org.ballerinalang.langserver.completions.util.SortingUtil;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 /**
  * Completion provider for {@link TypeTestExpressionNode} context.
@@ -68,6 +71,9 @@ public class TypeTestExpressionNodeContext extends AbstractCompletionProvider<Ty
             QualifiedNameReferenceNode qNameRef = (QualifiedNameReferenceNode) context.getNodeAtCursor();
             List<Symbol> typesInModule = QNameRefCompletionUtil.getTypesInModule(context, qNameRef);
             completionItems.addAll(this.getCompletionItemList(typesInModule, context));
+        } else if (isValidTypeName(node.typeDescriptor()) && 
+                context.getCursorPosition().getCharacter() > node.typeDescriptor().lineRange().endLine().offset()) {
+            return CompletionUtil.route(context, node.parent());
         } else {
             completionItems.addAll(this.getTypeDescContextItems(context));
             completionItems.addAll(getModuleTypeDescCompletionsForExpression(context, node));
@@ -75,6 +81,13 @@ public class TypeTestExpressionNodeContext extends AbstractCompletionProvider<Ty
         this.sort(context, node, completionItems);
 
         return completionItems;
+    }
+    
+    private boolean isValidTypeName(Node node) {
+        if (node.kind() == SyntaxKind.SIMPLE_NAME_REFERENCE) {
+            return !((SimpleNameReferenceNode) node).name().text().isEmpty();
+        }
+        return true;
     }
 
     private List<LSCompletionItem> getModuleTypeDescCompletionsForExpression(BallerinaCompletionContext context,
@@ -90,7 +103,7 @@ public class TypeTestExpressionNodeContext extends AbstractCompletionProvider<Ty
         if (typeSymbol.get().typeKind() == TypeDescKind.UNION) {
             typeReferences = ((UnionTypeSymbol) typeSymbol.get()).memberTypeDescriptors().stream()
                     .filter(type -> type.typeKind() == TypeDescKind.TYPE_REFERENCE)
-                    .map(type -> (TypeReferenceTypeSymbol) type).collect(Collectors.toList());
+                    .map(type -> (TypeReferenceTypeSymbol) type).toList();
         } else if (typeSymbol.get().typeKind() == TypeDescKind.TYPE_REFERENCE) {
             typeReferences = List.of((TypeReferenceTypeSymbol) typeSymbol.get());
         } else {
@@ -143,6 +156,7 @@ public class TypeTestExpressionNodeContext extends AbstractCompletionProvider<Ty
         return cursor < isKeyword.textRange().startOffset();
     }
 
+    @Override
     protected List<LSCompletionItem> expressionCompletions(BallerinaCompletionContext context,
                                                            TypeTestExpressionNode node) {
         if (QNameRefCompletionUtil.onQualifiedNameIdentifier(context, context.getNodeAtCursor())) {
