@@ -49,7 +49,7 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 /**
  * A utility for building a SignatureInformation.
@@ -182,14 +182,13 @@ public class SignatureInfoModelBuilder {
             return;
         }
 
-        List<Parameter> parameters = parameterSymbols
-                .subList(skipFirstParam() ? 1 : 0, parameterSymbols.size())
-                .stream()
-                .map(param -> new Parameter(param, false, false, context))
-                .collect(Collectors.toList());
-
         Optional<ParameterSymbol> restParam = functionTypeSymbol.flatMap(FunctionTypeSymbol::restParam);
-        restParam.ifPresent(parameter -> parameters.add(new Parameter(parameter, false, true, context)));
+        List<Parameter> parameters = Stream.concat(
+                parameterSymbols.subList(skipFirstParam() ? 1 : 0, parameterSymbols.size())
+                    .stream()
+                    .map(param -> new Parameter(param, false, false, context)),
+                restParam.stream().map(parameter -> new Parameter(parameter, false, true, context))
+        ).toList();
 
         // Create a list of param info models
         for (Parameter param : parameters) {
@@ -200,7 +199,7 @@ public class SignatureInfoModelBuilder {
 
         includedRecordParams = this.parameterModels.stream()
                 .filter(ParameterInfoModel::isIncludedRecordParam)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
