@@ -50,6 +50,7 @@ import io.ballerina.compiler.syntax.tree.Node;
 import io.ballerina.compiler.syntax.tree.NodeList;
 import io.ballerina.compiler.syntax.tree.ObjectFieldNode;
 import io.ballerina.compiler.syntax.tree.ObjectTypeDescriptorNode;
+import io.ballerina.compiler.syntax.tree.OptionalTypeDescriptorNode;
 import io.ballerina.compiler.syntax.tree.ParameterizedTypeDescriptorNode;
 import io.ballerina.compiler.syntax.tree.ParenthesisedTypeDescriptorNode;
 import io.ballerina.compiler.syntax.tree.RecordFieldNode;
@@ -64,6 +65,7 @@ import io.ballerina.compiler.syntax.tree.TableTypeDescriptorNode;
 import io.ballerina.compiler.syntax.tree.Token;
 import io.ballerina.compiler.syntax.tree.TupleTypeDescriptorNode;
 import io.ballerina.compiler.syntax.tree.TypeDefinitionNode;
+import io.ballerina.compiler.syntax.tree.TypeDescriptorNode;
 import io.ballerina.compiler.syntax.tree.TypeReferenceNode;
 import org.ballerinalang.docgen.docs.BallerinaDocGenerator;
 import org.ballerinalang.docgen.generator.model.Annotation;
@@ -93,12 +95,12 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.StringJoiner;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 /**
  * Generates the Page bClasses for bal packages.
  */
-public class Generator {
+public final class Generator {
 
     private static final String EMPTY_STRING = "";
     private static final String RETURN_PARAM_NAME = "return";
@@ -108,6 +110,10 @@ public class Generator {
     public static final String LISTENER_DETACH_METHOD_NAME = "detach";
     public static final String LISTENER_IMMEDIATE_STOP_METHOD_NAME = "immediateStop";
     public static final String LISTENER_GRACEFUL_STOP_METHOD_NAME = "gracefulStop";
+    public static final String DOC_HEADER_PREFIX = "# ";
+
+    private Generator() {
+    }
 
     /**
      * Generate/Set the module constructs model(docerina model) when the syntax tree for the module is given.
@@ -115,12 +121,10 @@ public class Generator {
      * @param module  module constructs model to fill.
      * @param syntaxTree syntax tree of the document.
      * @param semanticModel semantic model
-     * @return whether the module has any public constructs.
      */
-    public static boolean setModuleFromSyntaxTree(Module module, SyntaxTree syntaxTree,
+    public static void setModuleFromSyntaxTree(Module module, SyntaxTree syntaxTree,
                                                   SemanticModel semanticModel) {
 
-        boolean hasPublicConstructs = false;
         if (syntaxTree.containsModulePart()) {
             ModulePartNode modulePartNode = syntaxTree.rootNode();
             for (Node node : modulePartNode.members()) {
@@ -129,205 +133,235 @@ public class Generator {
                     if (typeDefinition.visibilityQualifier().isPresent() && typeDefinition.visibilityQualifier().get()
                             .kind().equals(SyntaxKind.PUBLIC_KEYWORD) ||
                             isTypePramOrBuiltinSubtype(typeDefinition.metadata())) {
-                        hasPublicConstructs = addTypeDefinition(typeDefinition, module, semanticModel);
+                        addTypeDefinition((TypeDescriptorNode) typeDefinition.typeDescriptor(), typeDefinition.
+                                typeName().text(), typeDefinition.metadata(), module, semanticModel, false);
                     }
                 } else if (node.kind() == SyntaxKind.CLASS_DEFINITION) {
                     ClassDefinitionNode classDefinition = (ClassDefinitionNode) node;
                     if (classDefinition.visibilityQualifier().isPresent() && classDefinition.visibilityQualifier().get()
                             .kind().equals(SyntaxKind.PUBLIC_KEYWORD)) {
-                        hasPublicConstructs = true;
                         BClass cls = getClassModel((ClassDefinitionNode) node, semanticModel, module);
-                        if (cls instanceof Client) {
-                            module.clients.add((Client) cls);
-                        } else if (cls instanceof Listener) {
-                            module.listeners.add((Listener) cls);
+                        if (cls instanceof Client client) {
+                            module.clients.add(client);
+                        } else if (cls instanceof Listener listener) {
+                            module.listeners.add(listener);
                         } else {
                             module.classes.add(cls);
                         }
                     }
                 } else if (node.kind() == SyntaxKind.FUNCTION_DEFINITION &&
                         containsToken(((FunctionDefinitionNode) node).qualifierList(), SyntaxKind.PUBLIC_KEYWORD)) {
-                    hasPublicConstructs = true;
                     module.functions.add(getFunctionModel((FunctionDefinitionNode) node, semanticModel, module));
                 } else if (node.kind() == SyntaxKind.CONST_DECLARATION && ((ConstantDeclarationNode) node)
                         .visibilityQualifier().isPresent() && ((ConstantDeclarationNode) node).visibilityQualifier()
                         .get().kind().equals(SyntaxKind.PUBLIC_KEYWORD)) {
-                    hasPublicConstructs = true;
                     module.constants.add(getConstantTypeModel((ConstantDeclarationNode) node, semanticModel, module));
                 } else if (node.kind() == SyntaxKind.ANNOTATION_DECLARATION && ((AnnotationDeclarationNode) node)
                         .visibilityQualifier().isPresent() && ((AnnotationDeclarationNode) node)
                         .visibilityQualifier().get().kind().equals(SyntaxKind.PUBLIC_KEYWORD)) {
-                    hasPublicConstructs = true;
                     module.annotations.add(getAnnotationModel((AnnotationDeclarationNode) node, semanticModel, module));
                 } else if (node.kind() == SyntaxKind.ENUM_DECLARATION &&
                         ((EnumDeclarationNode) node).qualifier().isPresent() &&
                         ((EnumDeclarationNode) node).qualifier().get().kind().equals(SyntaxKind.PUBLIC_KEYWORD)) {
                     module.enums.add(getEnumModel((EnumDeclarationNode) node));
-                } else if (node.kind() == SyntaxKind.MODULE_VAR_DECL &&
-                        ((ModuleVariableDeclarationNode) node).visibilityQualifier().isPresent() &&
-                        ((ModuleVariableDeclarationNode) node).visibilityQualifier().get().kind()
-                                .equals(SyntaxKind.PUBLIC_KEYWORD)) {
-                    module.variables.add(getModuleVariable((ModuleVariableDeclarationNode) node, semanticModel,
-                            module));
+                } else if (node.kind() == SyntaxKind.MODULE_VAR_DECL) {
+                    ModuleVariableDeclarationNode variableDeclarationNode = (ModuleVariableDeclarationNode) node;
+                    DefaultableVariable defaultableVariable = getModuleVariable(variableDeclarationNode,
+                            semanticModel, module);
+                    if (containsToken(variableDeclarationNode.qualifiers(),
+                            SyntaxKind.CONFIGURABLE_KEYWORD)) {
+                        module.configurables.add(defaultableVariable);
+                    } else if (variableDeclarationNode.visibilityQualifier().isPresent() &&
+                            variableDeclarationNode.visibilityQualifier().get().kind()
+                                    .equals(SyntaxKind.PUBLIC_KEYWORD)) {
+                        module.variables.add(defaultableVariable);
+                    }
                 }
             }
         }
-        return hasPublicConstructs;
     }
 
-    public static boolean addTypeDefinition(TypeDefinitionNode typeDefinition, Module module, SemanticModel
-            semanticModel) {
+    public static void addTypeDefinition(TypeDescriptorNode typeDescriptorNode, String typeName,
+                                            Optional<MetadataNode> metaDataNode, Module module,
+                                            SemanticModel semanticModel, boolean isNullable) {
+        SyntaxKind syntaxKind = typeDescriptorNode.kind();
 
-        String typeName = typeDefinition.typeName().text();
-        Optional<MetadataNode> metaDataNode = typeDefinition.metadata();
-        SyntaxKind syntaxKind = typeDefinition.typeDescriptor().kind();
-
-        if (syntaxKind.equals(SyntaxKind.RECORD_TYPE_DESC)) {
-            module.records.add(getRecordTypeModel((RecordTypeDescriptorNode) typeDefinition.typeDescriptor(),
-                    typeName, metaDataNode, semanticModel, module));
-        } else if (syntaxKind.equals(SyntaxKind.OBJECT_TYPE_DESC)) {
-            ObjectTypeDescriptorNode objectTypeDescriptorNode =
-                    (ObjectTypeDescriptorNode) typeDefinition.typeDescriptor();
-            BObjectType bObj = getObjectTypeModel(objectTypeDescriptorNode,
-                    typeName, metaDataNode, semanticModel, module);
-            if (containsToken(objectTypeDescriptorNode.objectTypeQualifiers(), SyntaxKind.SERVICE_KEYWORD)) {
-                module.serviceTypes.add(bObj);
-            } else {
-                module.objectTypes.add(bObj);
-            }
-        } else if (syntaxKind.equals(SyntaxKind.UNION_TYPE_DESC)) {
-            Type unionType = Type.fromNode(typeDefinition.typeDescriptor(), semanticModel, module);
-            if (unionType.memberTypes.stream().allMatch(type ->
-                    (type.category != null && type.category.equals("errors")) ||
-                            (type.category != null && type.category.equals("builtin")) &&
-                                    type.name.equals("error"))) {
-                module.errors.add(new Error(typeName, getDocFromMetadata(metaDataNode), isDeprecated(metaDataNode),
-                        Type.fromNode(typeDefinition.typeDescriptor(), semanticModel, module)));
-            } else {
-                module.unionTypes.add(getUnionTypeModel(typeDefinition.typeDescriptor(),
+        switch (syntaxKind) {
+            case RECORD_TYPE_DESC:
+                module.records.add(getRecordTypeModel((RecordTypeDescriptorNode) typeDescriptorNode,
                         typeName, metaDataNode, semanticModel, module));
-            }
-        } else if (syntaxKind.equals(SyntaxKind.SIMPLE_NAME_REFERENCE) ||
-                syntaxKind.equals(SyntaxKind.QUALIFIED_NAME_REFERENCE)) {
-            Type refType = Type.fromNode(typeDefinition.typeDescriptor(), semanticModel, module);
-            if (refType.category.equals("errors")) {
-                module.errors.add(new Error(typeName, getDocFromMetadata(metaDataNode), isDeprecated(metaDataNode),
-                        refType));
-            } else {
-                module.simpleNameReferenceTypes.add(getUnionTypeModel(typeDefinition.typeDescriptor(), typeName,
-                        metaDataNode, semanticModel, module));
-            }
-        } else if (syntaxKind.equals(SyntaxKind.DISTINCT_TYPE_DESC) &&
-                ((DistinctTypeDescriptorNode) (typeDefinition.typeDescriptor())).typeDescriptor().kind()
-                        == SyntaxKind.ERROR_TYPE_DESC) {
-            Type detailType = null;
-            ParameterizedTypeDescriptorNode parameterizedTypeDescNode = (ParameterizedTypeDescriptorNode)
-                    ((DistinctTypeDescriptorNode) (typeDefinition.typeDescriptor())).typeDescriptor();
-            if (parameterizedTypeDescNode.typeParamNode().isPresent()) {
-                detailType = Type.fromNode(parameterizedTypeDescNode.typeParamNode().get().typeNode(), semanticModel,
-                        module);
-            }
-            Error err = new Error(typeName, getDocFromMetadata(metaDataNode), isDeprecated(metaDataNode), detailType);
-            err.isDistinct = true;
-            module.errors.add(err);
-        } else if (syntaxKind.equals(SyntaxKind.DISTINCT_TYPE_DESC) &&
-                ((DistinctTypeDescriptorNode) (typeDefinition.typeDescriptor())).typeDescriptor().kind()
-                        == SyntaxKind.OBJECT_TYPE_DESC) {
-            ObjectTypeDescriptorNode objectTypeDescriptorNode = (ObjectTypeDescriptorNode)
-                    ((DistinctTypeDescriptorNode) (typeDefinition.typeDescriptor())).typeDescriptor();
-            BObjectType bObj = getObjectTypeModel((ObjectTypeDescriptorNode)
-                            ((DistinctTypeDescriptorNode) (typeDefinition.typeDescriptor())).typeDescriptor(), typeName,
-                    metaDataNode, semanticModel, module);
-            bObj.isDistinct = true;
-            if (containsToken(objectTypeDescriptorNode.objectTypeQualifiers(), SyntaxKind.SERVICE_KEYWORD)) {
-                module.serviceTypes.add(bObj);
-            } else {
-                module.objectTypes.add(bObj);
-            }
-        } else if (syntaxKind.equals(SyntaxKind.DISTINCT_TYPE_DESC) &&
-                ((DistinctTypeDescriptorNode) (typeDefinition.typeDescriptor())).typeDescriptor().kind()
-                        == SyntaxKind.PARENTHESISED_TYPE_DESC) {
-            ParenthesisedTypeDescriptorNode parenthesisedTypeDescriptorNode = (ParenthesisedTypeDescriptorNode)
-                    ((DistinctTypeDescriptorNode) (typeDefinition.typeDescriptor())).typeDescriptor();
-            Type detailType = Type.fromNode(parenthesisedTypeDescriptorNode, semanticModel, module);
-            Error err = new Error(typeName, getDocFromMetadata(metaDataNode), isDeprecated(metaDataNode), detailType);
-            err.isDistinct = true;
-            module.errors.add(err);
-        } else if (syntaxKind.equals(SyntaxKind.DISTINCT_TYPE_DESC) &&
-                ((DistinctTypeDescriptorNode) (typeDefinition.typeDescriptor())).typeDescriptor().kind()
-                        == SyntaxKind.SIMPLE_NAME_REFERENCE) {
-            Type refType = Type.fromNode(((DistinctTypeDescriptorNode) (typeDefinition.typeDescriptor()))
-                    .typeDescriptor(), semanticModel, module);
-            if (refType.category.equals("errors")) {
-                Error err = new Error(typeName, getDocFromMetadata(metaDataNode), isDeprecated(metaDataNode), refType);
-                err.isDistinct = true;
-                module.errors.add(err);
-            } else {
-                List<Type> memberTypes = new ArrayList<>();
-                memberTypes.add(refType);
-                BType bType = new BType(typeName, getDocFromMetadata(metaDataNode), isDeprecated(metaDataNode),
-                        memberTypes);
-                bType.isAnonymousUnionType = true;
-                module.types.add(bType);
-            }
-        } else if (syntaxKind.equals(SyntaxKind.ERROR_TYPE_DESC)) {
-            ParameterizedTypeDescriptorNode parameterizedTypeDescNode =
-                    (ParameterizedTypeDescriptorNode) typeDefinition.typeDescriptor();
-            Type type = null;
-            if (parameterizedTypeDescNode.typeParamNode().isPresent()) {
-                type = Type.fromNode(parameterizedTypeDescNode.typeParamNode().get().typeNode(),
+                break;
+            case OBJECT_TYPE_DESC:
+                ObjectTypeDescriptorNode objectTypeDescriptorNode =
+                        (ObjectTypeDescriptorNode) typeDescriptorNode;
+                BObjectType bObj = getObjectTypeModel(objectTypeDescriptorNode,
+                        typeName, metaDataNode, semanticModel, module);
+                if (containsToken(objectTypeDescriptorNode.objectTypeQualifiers(), SyntaxKind.SERVICE_KEYWORD)) {
+                    module.serviceTypes.add(bObj);
+                } else {
+                    module.objectTypes.add(bObj);
+                }
+                break;
+            case UNION_TYPE_DESC:
+                Type unionType = Type.fromNode(typeDescriptorNode, semanticModel, module);
+                if (unionType.memberTypes.stream().allMatch(type ->
+                        (type.category != null && type.category.equals("errors")) ||
+                                (type.category != null && type.category.equals("builtin")) &&
+                                        type.name.equals("error"))) {
+                    module.errors.add(new Error(typeName, getDocFromMetadata(metaDataNode),
+                            getDescSectionsDocFromMetaDataList(metaDataNode), isDeprecated(metaDataNode),
+                            Type.fromNode(typeDescriptorNode, semanticModel, module)));
+                } else {
+                    module.unionTypes.add(getUnionTypeModel(typeDescriptorNode,
+                            typeName, metaDataNode, semanticModel, module));
+                }
+                break;
+            case SIMPLE_NAME_REFERENCE, QUALIFIED_NAME_REFERENCE:
+                Type refType = Type.fromNode(typeDescriptorNode, semanticModel, module);
+                if (refType.category.equals("errors")) {
+                    module.errors.add(new Error(typeName, getDocFromMetadata(metaDataNode),
+                            getDescSectionsDocFromMetaDataList(metaDataNode), isDeprecated(metaDataNode), refType));
+                } else {
+                    BType bType = getUnionTypeModel(typeDescriptorNode, typeName,
+                            metaDataNode, semanticModel, module);
+                    bType.isNullable = isNullable;
+                    module.simpleNameReferenceTypes.add(bType);
+                }
+                break;
+            case DISTINCT_TYPE_DESC:
+                TypeDescriptorNode distinctTypeDescriptorNode =
+                        ((DistinctTypeDescriptorNode) typeDescriptorNode).typeDescriptor();
+                SyntaxKind distinctTypeSyntaxKind = distinctTypeDescriptorNode.kind();
+
+                switch (distinctTypeSyntaxKind) {
+                    case ERROR_TYPE_DESC:
+                        Type detailType = null;
+                        ParameterizedTypeDescriptorNode parameterizedTypeDescNode = (ParameterizedTypeDescriptorNode)
+                                distinctTypeDescriptorNode;
+                        if (parameterizedTypeDescNode.typeParamNode().isPresent()) {
+                            detailType = Type.fromNode(parameterizedTypeDescNode.typeParamNode().get().typeNode(),
+                                    semanticModel, module);
+                            detailType.isNullable = isNullable;
+                        }
+                        Error err = new Error(typeName, getDocFromMetadata(metaDataNode),
+                                getDescSectionsDocFromMetaDataList(metaDataNode), isDeprecated(metaDataNode),
+                                detailType);
+                        err.isDistinct = true;
+                        module.errors.add(err);
+                        break;
+                    case OBJECT_TYPE_DESC:
+                        ObjectTypeDescriptorNode distinctObjectTypeDescNode = (ObjectTypeDescriptorNode)
+                                distinctTypeDescriptorNode;
+                        BObjectType bDistinctObj = getObjectTypeModel((ObjectTypeDescriptorNode)
+                                        distinctTypeDescriptorNode, typeName,
+                                metaDataNode, semanticModel, module);
+                        bDistinctObj.isDistinct = true;
+                        if (containsToken(distinctObjectTypeDescNode.objectTypeQualifiers(),
+                                SyntaxKind.SERVICE_KEYWORD)) {
+                            module.serviceTypes.add(bDistinctObj);
+                        } else {
+                            module.objectTypes.add(bDistinctObj);
+                        }
+                        break;
+                    case PARENTHESISED_TYPE_DESC:
+                        ParenthesisedTypeDescriptorNode parenthesisedTypeDescriptorNode =
+                                (ParenthesisedTypeDescriptorNode) distinctTypeDescriptorNode;
+                        Type parenthesisType = Type.fromNode(parenthesisedTypeDescriptorNode, semanticModel, module);
+                        parenthesisType.isNullable = isNullable;
+                        Error parenthesisErr = new Error(typeName, getDocFromMetadata(metaDataNode),
+                                getDescSectionsDocFromMetaDataList(metaDataNode), isDeprecated(metaDataNode),
+                                parenthesisType);
+                        parenthesisErr.isDistinct = true;
+                        module.errors.add(parenthesisErr);
+                        break;
+                    case SIMPLE_NAME_REFERENCE:
+                        Type distinctRefType = Type.fromNode(distinctTypeDescriptorNode, semanticModel, module);
+                        distinctRefType.isNullable = isNullable;
+                        if (distinctRefType.category.equals("errors")) {
+                            Error simpleNameRefErr = new Error(typeName, getDocFromMetadata(metaDataNode),
+                                    getDescSectionsDocFromMetaDataList(metaDataNode), isDeprecated(metaDataNode),
+                                    distinctRefType);
+                            simpleNameRefErr.isDistinct = true;
+                            module.errors.add(simpleNameRefErr);
+                        } else {
+                            List<Type> memberTypes = new ArrayList<>();
+                            memberTypes.add(distinctRefType);
+                            BType bType = new BType(typeName, getDocFromMetadata(metaDataNode),
+                                    getDescSectionsDocFromMetaDataList(metaDataNode), isDeprecated(metaDataNode),
+                                    memberTypes);
+                            bType.isNullable = isNullable;
+                            bType.isAnonymousUnionType = true;
+                            module.types.add(bType);
+                        }
+                        break;
+                    default:
+                        // No action needed
+                        break;
+                }
+                break;
+            case ERROR_TYPE_DESC:
+                ParameterizedTypeDescriptorNode parameterizedTypeDescNode =
+                        (ParameterizedTypeDescriptorNode) typeDescriptorNode;
+                Type type = null;
+                if (parameterizedTypeDescNode.typeParamNode().isPresent()) {
+                    type = Type.fromNode(parameterizedTypeDescNode.typeParamNode().get().typeNode(),
+                            semanticModel, module);
+                    type.isNullable = isNullable;
+                }
+                module.errors.add(new Error(typeName, getDocFromMetadata(metaDataNode),
+                        getDescSectionsDocFromMetaDataList(metaDataNode), isDeprecated(metaDataNode), type));
+                break;
+            case INTERSECTION_TYPE_DESC:
+                addIntersectionTypeModel((IntersectionTypeDescriptorNode) typeDescriptorNode, typeName,
+                        metaDataNode, semanticModel, module);
+                break;
+            case TABLE_TYPE_DESC:
+                TableType tableType = getTableTypeModel((TableTypeDescriptorNode) typeDescriptorNode,
+                        typeName, metaDataNode, semanticModel, module);
+                tableType.rowParameterType.isNullable = isNullable;
+                module.tableTypes.add(tableType);
+                break;
+            case MAP_TYPE_DESC:
+                MapType mapType = getMapTypeModel((MapTypeDescriptorNode) typeDescriptorNode, typeName, metaDataNode,
                         semanticModel, module);
-            }
-            module.errors.add(new Error(typeName, getDocFromMetadata(metaDataNode), isDeprecated(metaDataNode), type));
-        } else if (syntaxKind.equals(SyntaxKind.TUPLE_TYPE_DESC)) {
-            module.tupleTypes.add(getTupleTypeModel((TupleTypeDescriptorNode) typeDefinition.typeDescriptor(),
-                    typeName, metaDataNode, semanticModel, module));
-        } else if (syntaxKind.equals(SyntaxKind.TABLE_TYPE_DESC)) {
-            module.tableTypes.add(getTableTypeModel((TableTypeDescriptorNode) typeDefinition.typeDescriptor(),
-                    typeName, metaDataNode, semanticModel, module));
-        } else if (syntaxKind.equals(SyntaxKind.MAP_TYPE_DESC)) {
-            module.mapTypes.add(getMapTypeModel((MapTypeDescriptorNode) typeDefinition.typeDescriptor(),
-                    typeName, metaDataNode, semanticModel, module));
-        } else if (syntaxKind.equals(SyntaxKind.INTERSECTION_TYPE_DESC)) {
-            addIntersectionTypeModel((IntersectionTypeDescriptorNode) typeDefinition.typeDescriptor(), typeName,
-                    metaDataNode, semanticModel, module);
-        } else if (syntaxKind.equals(SyntaxKind.TYPEDESC_TYPE_DESC)) {
-            module.typeDescriptorTypes.add(getTypeDescModel((ParameterizedTypeDescriptorNode) typeDefinition.
-                            typeDescriptor(), typeName, metaDataNode, semanticModel, module));
-        } else if (syntaxKind.equals(SyntaxKind.INT_TYPE_DESC)) {
-            module.integerTypes.add(getUnionTypeModel(typeDefinition.typeDescriptor(), typeName, metaDataNode,
-                    semanticModel, module));
-        } else if (syntaxKind.equals(SyntaxKind.DECIMAL_TYPE_DESC)) {
-            module.decimalTypes.add(getUnionTypeModel(typeDefinition.typeDescriptor(), typeName, metaDataNode,
-                    semanticModel, module));
-        } else if (syntaxKind.equals(SyntaxKind.XML_TYPE_DESC)) {
-            module.xmlTypes.add(getUnionTypeModel(typeDefinition.typeDescriptor(), typeName, metaDataNode,
-                    semanticModel, module));
-        } else if (syntaxKind.equals(SyntaxKind.FUNCTION_TYPE_DESC)) {
-            module.functionTypes.add(getUnionTypeModel(typeDefinition.typeDescriptor(), typeName, metaDataNode,
-                    semanticModel, module));
-        } else if (syntaxKind.equals(SyntaxKind.ANYDATA_TYPE_DESC)) {
-            module.anyDataTypes.add(getUnionTypeModel(typeDefinition.typeDescriptor(), typeName, metaDataNode,
-                    semanticModel, module));
-        } else if (syntaxKind.equals(SyntaxKind.STRING_TYPE_DESC)) {
-            module.stringTypes.add(getUnionTypeModel(typeDefinition.typeDescriptor(), typeName, metaDataNode,
-                    semanticModel, module));
-        } else if (syntaxKind.equals(SyntaxKind.ANY_TYPE_DESC)) {
-            module.anyTypes.add(getUnionTypeModel(typeDefinition.typeDescriptor(), typeName, metaDataNode,
-                    semanticModel, module));
-        } else if (syntaxKind.equals(SyntaxKind.ARRAY_TYPE_DESC)) {
-            module.arrayTypes.add(getUnionTypeModel(typeDefinition.typeDescriptor(), typeName, metaDataNode,
-                    semanticModel, module));
-        } else if (syntaxKind.equals(SyntaxKind.STREAM_TYPE_DESC)) {
-            module.streamTypes.add(getUnionTypeModel(typeDefinition.typeDescriptor(), typeName, metaDataNode,
-                    semanticModel, module));
-        } else {
-            return false;
+                mapType.mapParameterType.isNullable = isNullable;
+                module.mapTypes.add(mapType);
+                break;
+            case TUPLE_TYPE_DESC:
+                BType tupleType = getTupleTypeModel((TupleTypeDescriptorNode) typeDescriptorNode, typeName,
+                        metaDataNode, semanticModel, module);
+                tupleType.isNullable = isNullable;
+                module.tupleTypes.add(tupleType);
+                break;
+            case TYPEDESC_TYPE_DESC:
+                BType typeDescType = getTypeDescModel((ParameterizedTypeDescriptorNode) typeDescriptorNode, typeName,
+                        metaDataNode, semanticModel, module);
+                typeDescType.isNullable = isNullable;
+                module.typeDescriptorTypes.add(typeDescType);
+                break;
+            case OPTIONAL_TYPE_DESC:
+                addTypeDefinition((TypeDescriptorNode) ((OptionalTypeDescriptorNode) typeDescriptorNode).
+                        typeDescriptor(), typeName, metaDataNode, module, semanticModel, true);
+                break;
+            default:
+                BType bType = getUnionTypeModel(typeDescriptorNode, typeName, metaDataNode, semanticModel, module);
+                bType.isNullable = isNullable;
+                switch (syntaxKind) {
+                    case INT_TYPE_DESC -> module.integerTypes.add(bType);
+                    case DECIMAL_TYPE_DESC -> module.decimalTypes.add(bType);
+                    case XML_TYPE_DESC -> module.xmlTypes.add(bType);
+                    case FUNCTION_TYPE_DESC -> module.functionTypes.add(bType);
+                    case ANYDATA_TYPE_DESC -> module.anyDataTypes.add(bType);
+                    case STRING_TYPE_DESC -> module.stringTypes.add(bType);
+                    case ANY_TYPE_DESC -> module.anyTypes.add(bType);
+                    case ARRAY_TYPE_DESC -> module.arrayTypes.add(bType);
+                    case STREAM_TYPE_DESC -> module.streamTypes.add(bType);
+                    case BOOLEAN_TYPE_DESC -> module.booleanTypes.add(bType);
+                    default -> {
+                        // No action needed
+                    }
+                }
         }
-        return true;
-        // TODO: handle value type nodes
-        // TODO: handle built in ref type
-        // TODO: handle constrained types
     }
 
     public static boolean containsToken(NodeList<Token> nodeList, SyntaxKind kind) {
@@ -357,13 +391,15 @@ public class Generator {
                 EnumMemberNode enumMemberNode = (EnumMemberNode) node;
                 String memberName = enumMemberNode.identifier().text();
                 String doc = getDocFromMetadata(enumMemberNode.metadata());
-                if (doc.equals("")) {
+                if (doc.isEmpty()) {
                     doc = getParameterDocFromMetadataList(memberName, enumDeclaration.metadata());
                 }
-                members.add(new Construct(memberName, doc, false));
+                List<String> descSections = getDescSectionsDocFromMetaDataList(enumDeclaration.metadata());
+                members.add(new Construct(memberName, doc, descSections, false));
             }
         });
         return new Enum(enumName, getDocFromMetadata(enumDeclaration.metadata()),
+                getDescSectionsDocFromMetaDataList(enumDeclaration.metadata()),
                 isDeprecated(enumDeclaration.metadata()), members);
     }
 
@@ -380,6 +416,7 @@ public class Generator {
         Type dataType = annotationDeclaration.typeDescriptor().isPresent() ? Type.fromNode(annotationDeclaration.
                 typeDescriptor().get(), semanticModel, module) : null;
         return new Annotation(annotationName, getDocFromMetadata(annotationDeclaration.metadata()),
+                getDescSectionsDocFromMetaDataList(annotationDeclaration.metadata()),
                 isDeprecated(annotationDeclaration.metadata()), dataType, attachPointJoiner.toString());
     }
 
@@ -388,6 +425,7 @@ public class Generator {
         String constantName = constantNode.variableName().text();
         String value = constantNode.initializer().toString();
         String desc = getDocFromMetadata(constantNode.metadata());
+        List<String> descriptionSections = getDescSectionsDocFromMetaDataList(constantNode.metadata());
         Type type;
         if (constantNode.typeDescriptor().isPresent()) {
             type = Type.fromNode(constantNode.typeDescriptor().get(), semanticModel, module);
@@ -408,7 +446,8 @@ public class Generator {
             }
             type = new Type(dataType);
         }
-        return new Constant(constantName, desc, isDeprecated(constantNode.metadata()), type, value);
+        return new Constant(constantName, desc, descriptionSections, isDeprecated(constantNode.metadata()), type,
+                value);
     }
 
     private static void addIntersectionTypeModel(IntersectionTypeDescriptorNode typeDescriptor, String typeName,
@@ -436,7 +475,8 @@ public class Generator {
         List<Type> memberTypes = new ArrayList<>();
         Type.addIntersectionMemberTypes(typeDescriptor, semanticModel, memberTypes, module);
         BType bType = new BType(typeName, getDocFromMetadata(optionalMetadataNode),
-                isDeprecated(optionalMetadataNode), memberTypes);
+                getDescSectionsDocFromMetaDataList(optionalMetadataNode), isDeprecated(optionalMetadataNode),
+                memberTypes);
         bType.isIntersectionType = true;
         module.intersectionTypes.add(bType);
     }
@@ -446,9 +486,10 @@ public class Generator {
                                            Module module) {
         List<Type> memberTypes = new ArrayList<>();
         memberTypes.addAll(typeDescriptor.memberTypeDesc().stream().map(type ->
-                Type.fromNode(type, semanticModel, module)).collect(Collectors.toList()));
+                Type.fromNode(type, semanticModel, module)).toList());
         BType bType = new BType(tupleTypeName, getDocFromMetadata(optionalMetadataNode),
-                isDeprecated(optionalMetadataNode), memberTypes);
+                getDescSectionsDocFromMetaDataList(optionalMetadataNode), isDeprecated(optionalMetadataNode),
+                memberTypes);
         bType.isTuple = true;
         return bType;
     }
@@ -460,8 +501,8 @@ public class Generator {
         if (typeDescriptor.typeParamNode().isPresent()) {
             type = Type.fromNode(typeDescriptor.typeParamNode().get().typeNode(), semanticModel, module);
         }
-        BType bType = new BType(typeName, getDocFromMetadata(optionalMetadataNode), isDeprecated(optionalMetadataNode),
-                null);
+        BType bType = new BType(typeName, getDocFromMetadata(optionalMetadataNode),
+                getDescSectionsDocFromMetaDataList(optionalMetadataNode), isDeprecated(optionalMetadataNode), null);
         bType.isTypeDesc = true;
         bType.version = BallerinaDocGenerator.getBallerinaShortVersion();
         bType.elementType = type;
@@ -474,6 +515,7 @@ public class Generator {
         List<Type> memberTypes = new ArrayList<>();
         Type.addUnionMemberTypes(unionTypeDescriptor, semanticModel, memberTypes, module);
         BType bType = new BType(unionName, getDocFromMetadata(optionalMetadataNode),
+                                getDescSectionsDocFromMetaDataList(optionalMetadataNode),
                                 isDeprecated(optionalMetadataNode), memberTypes);
         bType.isAnonymousUnionType = true;
         return bType;
@@ -486,7 +528,7 @@ public class Generator {
                 ? null : Type.fromNode(typeDescriptor, semanticModel, module);
 
         return new MapType(typeName, getDocFromMetadata(optionalMetadataNode),
-                isDeprecated(optionalMetadataNode), type);
+                getDescSectionsDocFromMetaDataList(optionalMetadataNode), isDeprecated(optionalMetadataNode), type);
     }
 
     private static TableType getTableTypeModel(TableTypeDescriptorNode typeDescriptor, String typeName,
@@ -498,7 +540,8 @@ public class Generator {
                 ? null : Type.fromNode(typeDescriptor.keyConstraintNode().get(), semanticModel, module);
 
         return new TableType(typeName, getDocFromMetadata(optionalMetadataNode),
-                isDeprecated(optionalMetadataNode), rowParameterType, keyConstraintType);
+                getDescSectionsDocFromMetaDataList(optionalMetadataNode), isDeprecated(optionalMetadataNode),
+                rowParameterType, keyConstraintType);
     }
 
     private static BClass getClassModel(ClassDefinitionNode classDefinitionNode, SemanticModel semanticModel,
@@ -507,6 +550,7 @@ public class Generator {
         List<Function> includedFunctions = new ArrayList<>();
         String name = classDefinitionNode.className().text();
         String description = getDocFromMetadata(classDefinitionNode.metadata());
+        List<String> descriptionSections = getDescSectionsDocFromMetaDataList(classDefinitionNode.metadata());
         boolean isDeprecated = isDeprecated(classDefinitionNode.metadata());
         boolean isReadOnly = containsToken(classDefinitionNode.classTypeQualifiers(), SyntaxKind.READONLY_KEYWORD);
         boolean isIsolated = containsToken(classDefinitionNode.classTypeQualifiers(), SyntaxKind.ISOLATED_KEYWORD);
@@ -531,21 +575,22 @@ public class Generator {
         }
 
         // Get functions that are not overridden
-        List<Function> functions = includedFunctions.stream().filter(includedFunction ->
+        List<Function> functions = Stream.concat(includedFunctions.stream().filter(includedFunction ->
                 classFunctions
                         .stream()
-                        .noneMatch(objFunction -> objFunction.name.equals(includedFunction.name)))
-                .collect(Collectors.toList());
-
-        functions.addAll(classFunctions);
+                        .noneMatch(objFunction -> objFunction.name.equals(includedFunction.name))),
+                classFunctions.stream()).toList();
 
         if (containsToken(classDefinitionNode.classTypeQualifiers(), SyntaxKind.CLIENT_KEYWORD)) {
-            return new Client(name, description, isDeprecated, fields, functions, isReadOnly, isIsolated, isService);
+            return new Client(name, description, descriptionSections, isDeprecated, fields, functions, isReadOnly,
+                    isIsolated, isService);
         } else if (containsToken(classDefinitionNode.classTypeQualifiers(), SyntaxKind.LISTENER_KEYWORD)
                 || isListenerModel(functions)) {
-            return new Listener(name, description, isDeprecated, fields, functions, isReadOnly, isIsolated, isService);
+            return new Listener(name, description, descriptionSections, isDeprecated, fields, functions, isReadOnly,
+                    isIsolated, isService);
         } else {
-            return new BClass(name, description, isDeprecated, fields, functions, isReadOnly, isIsolated, isService);
+            return new BClass(name, description, descriptionSections, isDeprecated, fields, functions, isReadOnly,
+                    isIsolated, isService);
         }
     }
 
@@ -581,21 +626,21 @@ public class Generator {
         List<Function> includedFunctions = new ArrayList<>();
 
         String description = getDocFromMetadata(optionalMetadataNode);
+        List<String> descriptionSections = getDescSectionsDocFromMetaDataList(optionalMetadataNode);
         boolean isDeprecated = isDeprecated(optionalMetadataNode);
 
         List<DefaultableVariable> fields = getDefaultableVariableList(typeDescriptorNode.members(),
                 optionalMetadataNode, semanticModel, module);
 
         for (Node member : typeDescriptorNode.members()) {
-            if (member instanceof MethodDeclarationNode) {
-                MethodDeclarationNode methodNode = (MethodDeclarationNode) member;
+            if (member instanceof MethodDeclarationNode methodNode) {
                 if (containsToken(methodNode.qualifierList(), SyntaxKind.PUBLIC_KEYWORD) ||
                         containsToken(methodNode.qualifierList(), SyntaxKind.REMOTE_KEYWORD) ||
                         containsToken(methodNode.qualifierList(), SyntaxKind.RESOURCE_KEYWORD)) {
                     String methodName = "";
                     String accessor = "";
                     String resourcePath = "";
-                    if (methodNode.kind() == SyntaxKind.RESOURCE_ACCESSOR_DEFINITION) {
+                    if (methodNode.kind() == SyntaxKind.RESOURCE_ACCESSOR_DECLARATION) {
                         accessor = methodNode.methodName().text();
                         resourcePath = methodNode.relativeResourcePath().stream().
                                 collect(StringBuilder::new, (firstString,
@@ -630,29 +675,27 @@ public class Generator {
                     }
 
                     objectFunctions.add(new Function(methodName, accessor, resourcePath,
-                            getDocFromMetadata(methodNode.metadata()), functionKind, false,
+                            getDocFromMetadata(methodNode.metadata()),
+                            getDescSectionsDocFromMetaDataList(methodNode.metadata()), functionKind, false,
                             isDeprecated(methodNode.metadata()), containsToken(methodNode.qualifierList(),
                             SyntaxKind.ISOLATED_KEYWORD), parameters, returnParams));
                 }
             } else if (member instanceof TypeReferenceNode) {
                 Type originType = Type.fromNode(member, semanticModel, module);
-                if (originType instanceof ObjectType) {
-                    includedFunctions.addAll(mapFunctionTypesToFunctions(((ObjectType) originType).functionTypes,
+                if (originType instanceof ObjectType objectType) {
+                    includedFunctions.addAll(mapFunctionTypesToFunctions(objectType.functionTypes,
                             originType));
                 }
             }
         }
 
         // Get functions that are not overridden
-        List<Function> functions = includedFunctions.stream().filter(includedFunction ->
-                objectFunctions
-                        .stream()
-                        .noneMatch(objFunction -> objFunction.name.equals(includedFunction.name)))
-                .collect(Collectors.toList());
+        List<Function> functions = Stream.concat(
+                includedFunctions.stream().filter(includedFunction -> objectFunctions.stream()
+                        .noneMatch(objFunction -> objFunction.name.equals(includedFunction.name))),
+                objectFunctions.stream()).toList();
 
-        functions.addAll(objectFunctions);
-
-        return new BObjectType(objectName, description, isDeprecated, fields, functions);
+        return new BObjectType(objectName, description, descriptionSections, isDeprecated, fields, functions);
     }
 
     private static List<Function> mapFunctionTypesToFunctions(List<FunctionType> functionTypes, Type originType) {
@@ -660,7 +703,7 @@ public class Generator {
         for (FunctionType functionType : functionTypes) {
             List<DefaultableVariable> parameters = new ArrayList<>(functionType.paramTypes.stream()
                     .map(type -> new DefaultableVariable(type.name, type.description, false,
-                            type.elementType, "")).collect(Collectors.toList()));
+                            type.elementType, "")).toList());
 
             List<Variable> returnParameters = new ArrayList<>();
             if (functionType.returnType != null) {
@@ -669,8 +712,9 @@ public class Generator {
             }
 
             Function function = new Function(functionType.name, functionType.accessor, functionType.resourcePath,
-                    functionType.description, functionType.functionKind, functionType.isExtern,
-                    functionType.isDeprecated, functionType.isIsolated, parameters, returnParameters);
+                    functionType.description, functionType.descriptionSections, functionType.functionKind,
+                    functionType.isExtern, functionType.isDeprecated, functionType.isIsolated, parameters,
+                    returnParameters);
             function.inclusionType = originType.isPublic ? originType : null;
             functions.add(function);
         }
@@ -720,6 +764,7 @@ public class Generator {
         }
 
         return new Function(functionName, accessor, resourcePath, getDocFromMetadata(functionDefinitionNode.metadata()),
+                getDescSectionsDocFromMetaDataList(functionDefinitionNode.metadata()),
                 functionKind, isExtern, isDeprecated(functionDefinitionNode.metadata()),
                 containsToken(functionDefinitionNode.qualifierList(), SyntaxKind.ISOLATED_KEYWORD), parameters,
                 returnParams, annotationAttachments);
@@ -739,20 +784,20 @@ public class Generator {
             fields.add(restVariable);
         }
         return new Record(recordName, getDocFromMetadata(optionalMetadataNode),
+                          getDescSectionsDocFromMetaDataList(optionalMetadataNode),
                           isDeprecated(optionalMetadataNode), isClosed, fields);
     }
 
-    public static List<DefaultableVariable> getDefaultableVariableList(NodeList nodeList,
+    public static List<DefaultableVariable> getDefaultableVariableList(NodeList<?> nodeList,
                                                                        Optional<MetadataNode> optionalMetadataNode,
                                                                        SemanticModel semanticModel, Module module) {
         List<DefaultableVariable> variables = new ArrayList<>();
         for (int i = 0; i < nodeList.size(); i++) {
             Node node = nodeList.get(i);
-            if (node instanceof RecordFieldWithDefaultValueNode) {
-                RecordFieldWithDefaultValueNode recordField = (RecordFieldWithDefaultValueNode) node;
+            if (node instanceof RecordFieldWithDefaultValueNode recordField) {
                 String name = recordField.fieldName().text();
                 String doc = getDocFromMetadata(recordField.metadata());
-                if (doc.equals("")) {
+                if (doc.isEmpty()) {
                     doc = getParameterDocFromMetadataList(name, optionalMetadataNode);
                 }
                 String defaultValue = recordField.expression().toString();
@@ -764,15 +809,14 @@ public class Generator {
                     defaultableVariable.isReadOnly = true;
                 }
                 variables.add(defaultableVariable);
-            } else if (node instanceof RecordFieldNode) {
-                RecordFieldNode recordField = (RecordFieldNode) node;
+            } else if (node instanceof RecordFieldNode recordField) {
                 String name = recordField.fieldName().text();
                 String doc = getDocFromMetadata(recordField.metadata());
-                if (doc.equals("")) {
+                if (doc.isEmpty()) {
                     doc = getParameterDocFromMetadataList(name, optionalMetadataNode);
                 }
                 Type type = Type.fromNode(recordField.typeName(), semanticModel, module);
-                type.isNullable = recordField.questionMarkToken().isPresent();
+                type.isOptional = recordField.questionMarkToken().isPresent();
                 DefaultableVariable defaultableVariable = new DefaultableVariable(name, doc,
                         isDeprecated(recordField.metadata()), type, "",
                         extractAnnotationAttachmentsFromMetadataNode(semanticModel, recordField.metadata()));
@@ -785,17 +829,16 @@ public class Generator {
                 if (!originType.isPublic) {
                     variables.addAll(originType.memberTypes.stream()
                             .map(type -> new DefaultableVariable(type.name, type.description, false,
-                                    type.elementType, "")).collect(Collectors.toList()));
-                } else if (originType.memberTypes.size() > 0) {
+                                    type.elementType, "")).toList());
+                } else if (!originType.memberTypes.isEmpty()) {
                     variables.add(new DefaultableVariable(originType));
                 }
-            } else if (node instanceof ObjectFieldNode) {
-                ObjectFieldNode objectField = (ObjectFieldNode) node;
+            } else if (node instanceof ObjectFieldNode objectField) {
                 if (objectField.visibilityQualifier().isPresent() && objectField.visibilityQualifier().get().kind()
                         .equals(SyntaxKind.PUBLIC_KEYWORD)) {
                     String name = objectField.fieldName().text();
                     String doc = getDocFromMetadata(objectField.metadata());
-                    if (doc.equals("")) {
+                    if (doc.isEmpty()) {
                         doc = getParameterDocFromMetadataList(name, optionalMetadataNode);
                     }
                     String defaultValue;
@@ -810,15 +853,13 @@ public class Generator {
                             extractAnnotationAttachmentsFromMetadataNode(semanticModel, objectField.metadata()));
                     variables.add(defaultableVariable);
                 }
-            } else if (node instanceof RequiredParameterNode) {
-                RequiredParameterNode requiredParameter = (RequiredParameterNode) node;
+            } else if (node instanceof RequiredParameterNode requiredParameter) {
                 String paramName = requiredParameter.paramName().isPresent() ?
                         requiredParameter.paramName().get().text() : "";
                 Type type = Type.fromNode(requiredParameter.typeName(), semanticModel, module);
                 variables.add(new DefaultableVariable(paramName, getParameterDocFromMetadataList(paramName,
                         optionalMetadataNode), isDeprecated(requiredParameter.annotations()), type, ""));
-            } else if (node instanceof DefaultableParameterNode) {
-                DefaultableParameterNode defaultableParameter = (DefaultableParameterNode) node;
+            } else if (node instanceof DefaultableParameterNode defaultableParameter) {
                 String paramName = defaultableParameter.paramName().isPresent() ?
                         defaultableParameter.paramName().get().text() : "";
                 Type type = Type.fromNode(defaultableParameter.typeName(), semanticModel, module);
@@ -827,8 +868,7 @@ public class Generator {
                         type, defaultableParameter.expression().toString(),
                         extractAnnotationAttachmentsFromAnnotations(semanticModel,
                                 defaultableParameter.annotations())));
-            } else if (node instanceof RestParameterNode) {
-                RestParameterNode restParameter = (RestParameterNode) node;
+            } else if (node instanceof RestParameterNode restParameter) {
                 String paramName = restParameter.paramName().isPresent() ?
                         restParameter.paramName().get().text() : "";
                 Type type = new Type(paramName);
@@ -836,8 +876,7 @@ public class Generator {
                 type.elementType = Type.fromNode(restParameter.typeName(), semanticModel, module);
                 variables.add(new DefaultableVariable(paramName, getParameterDocFromMetadataList(paramName,
                         optionalMetadataNode), false, type, ""));
-            } else if (node instanceof IncludedRecordParameterNode) {
-                IncludedRecordParameterNode includedRecord = (IncludedRecordParameterNode) node;
+            } else if (node instanceof IncludedRecordParameterNode includedRecord) {
                 String paramName = includedRecord.paramName().isPresent() ?
                         includedRecord.paramName().get().text() : "";
                 Type type = Type.fromNode(includedRecord.typeName(), semanticModel, module);
@@ -860,7 +899,7 @@ public class Generator {
             }
             final ModuleID id = symbol.getModule().get().id();
             annotationAttachments.add(
-                    new AnnotationAttachment(symbol.getName().orElse(""), "", false,
+                    new AnnotationAttachment(symbol.getName().orElse(""), "", null, false,
                             id.orgName(), id.moduleName(), id.version()));
         }));
         return annotationAttachments;
@@ -876,7 +915,7 @@ public class Generator {
             }
             final ModuleID id = symbol.getModule().get().id();
             annotationAttachments.add(
-                    new AnnotationAttachment(symbol.getName().orElse(""), "", false,
+                    new AnnotationAttachment(symbol.getName().orElse(""), "", null, false,
                             id.orgName(), id.moduleName(), id.version()));
         });
         return annotationAttachments;
@@ -922,11 +961,15 @@ public class Generator {
                 (MarkdownDocumentationNode) optionalMetadataNode.get().documentationString().get() : null;
         if (docLines != null) {
             for (Node docLine : docLines.documentationLines()) {
-                if (docLine instanceof MarkdownDocumentationLineNode) {
-                    doc.append(!((MarkdownDocumentationLineNode) docLine).documentElements().isEmpty() ?
-                            getDocLineString(((MarkdownDocumentationLineNode) docLine).documentElements()) : "\n");
-                } else if (docLine instanceof MarkdownCodeBlockNode) {
-                    doc.append(getDocCodeBlockString((MarkdownCodeBlockNode) docLine));
+                if (docLine instanceof MarkdownDocumentationLineNode markdownDocLine) {
+                    String docLineString = getDocLineString(markdownDocLine.documentElements());
+                    if (docLineString.startsWith(DOC_HEADER_PREFIX)) {
+                        break;
+                    }
+                    doc.append(!markdownDocLine.documentElements().isEmpty() ?
+                            getDocLineString(markdownDocLine.documentElements()) : "\n");
+                } else if (docLine instanceof MarkdownCodeBlockNode markdownCodeBlock) {
+                    doc.append(getDocCodeBlockString(markdownCodeBlock));
                 } else {
                     break;
                 }
@@ -947,22 +990,71 @@ public class Generator {
         if (docLines != null) {
             boolean lookForMoreLines = false;
             for (Node docLine : docLines.documentationLines()) {
-                if (docLine instanceof MarkdownParameterDocumentationLineNode) {
-                    if (((MarkdownParameterDocumentationLineNode) docLine).parameterName().text()
+                if (docLine instanceof MarkdownParameterDocumentationLineNode markdownParamDocLine) {
+                    if (markdownParamDocLine.parameterName().text()
                             .equals(parameterName)) {
-                        parameterDoc.append(getDocLineString(((MarkdownParameterDocumentationLineNode) docLine)
-                                .documentElements()));
+                        parameterDoc.append(getDocLineString(markdownParamDocLine.documentElements()));
                         lookForMoreLines = true;
                     } else {
                         lookForMoreLines = false;
                     }
-                } else if (lookForMoreLines && docLine instanceof MarkdownDocumentationLineNode) {
-                    parameterDoc.append(getDocLineString(((MarkdownDocumentationLineNode) docLine).documentElements()));
+                } else if (lookForMoreLines && docLine instanceof MarkdownDocumentationLineNode markdownDocLine) {
+                    String docLineString = getDocLineString(markdownDocLine.documentElements());
+                    if (!docLineString.isEmpty()) {
+                        parameterDoc.append(docLineString);
+                    } else {
+                        lookForMoreLines = false;
+                    }
                 }
             }
         }
 
         return parameterDoc.toString();
+    }
+
+    private static List<String> getDescSectionsDocFromMetaDataList(Optional<MetadataNode> optionalMetadataNode) {
+        if (optionalMetadataNode.isEmpty()) {
+            return new ArrayList<>();
+        }
+
+        List<String> descSections = new ArrayList<>();
+        MarkdownDocumentationNode docLines = optionalMetadataNode.get().documentationString().isPresent() ?
+                (MarkdownDocumentationNode) optionalMetadataNode.get().documentationString().get() : null;
+        if (docLines != null) {
+            StringBuilder sectionDoc = new StringBuilder();
+            boolean lookForMoreLines = false;
+            for (Node docLine : docLines.documentationLines()) {
+                if (docLine instanceof MarkdownDocumentationLineNode markdownDocLine) {
+                    String docLineString = getDocLineString(markdownDocLine.documentElements());
+                    if (!docLineString.isEmpty()) {
+                        if (docLineString.startsWith(DOC_HEADER_PREFIX)) {
+                            sectionDoc = new StringBuilder();
+                            sectionDoc.append(docLineString);
+                            lookForMoreLines = true;
+                        } else if (lookForMoreLines) {
+                            sectionDoc.append(docLineString);
+                        }
+                    } else {
+                        if (sectionDoc != null && !sectionDoc.toString().isEmpty()) {
+                            descSections.add(sectionDoc.toString());
+                            sectionDoc = null;
+                        }
+                        lookForMoreLines = false;
+                    }
+                } else {
+                    if (sectionDoc != null && !sectionDoc.toString().isEmpty()) {
+                        descSections.add(sectionDoc.toString());
+                        sectionDoc = null;
+                    }
+                    lookForMoreLines = false;
+                }
+            }
+            if (sectionDoc != null && !sectionDoc.toString().isEmpty()) {
+                descSections.add(sectionDoc.toString());
+            }
+        }
+
+        return descSections;
     }
 
     private static String getDocLineString(NodeList<Node> documentElements) {
