@@ -55,7 +55,10 @@ import static org.testng.Assert.assertTrue;
  *
  * @since 2.0.0
  */
-public class SemanticAPITestUtils {
+public final class SemanticAPITestUtils {
+
+    private SemanticAPITestUtils() {
+    }
 
     public static Document getDocumentForSingleSource(Project project) {
         Package currentPackage = project.currentPackage();
@@ -133,8 +136,12 @@ public class SemanticAPITestUtils {
         Optional<Symbol> symbol = model.symbol(srcFile, LinePosition.from(line, col));
         assertTrue(symbol.isPresent());
         assertEquals(symbol.get().kind(), symbolKind);
-        assertTrue(symbol.get().getName().isPresent());
-        assertEquals(symbol.get().getName().get(), name);
+        if (name != null) {
+            assertTrue(symbol.get().getName().isPresent());
+            assertEquals(symbol.get().getName().get(), name);
+        } else {
+            assertTrue(symbol.get().getName().isEmpty());
+        }
         return symbol.get();
     }
 
@@ -147,12 +154,12 @@ public class SemanticAPITestUtils {
     }
 
     public static List<String> getSymbolNames(List<String> mainList, String... args) {
-        return Stream.concat(mainList.stream(), Stream.of(args)).collect(Collectors.toList());
+        return Stream.concat(mainList.stream(), Stream.of(args)).toList();
     }
 
     @SafeVarargs
     public static <T> List<T> getSymbolNames(List<T>... lists) {
-        return Arrays.stream(lists).flatMap(Collection::stream).collect(Collectors.toList());
+        return Arrays.stream(lists).flatMap(Collection::stream).toList();
     }
 
     public static List<String> getSymbolNames(BPackageSymbol pkgSymbol, int symTag) {
