@@ -31,13 +31,11 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -47,30 +45,29 @@ import java.util.stream.Stream;
  */
 public class StrandDumpTest extends BaseTest {
 
-    private static final String testFileLocation = Paths.get("src/test/resources/troubleshoot/strandDump")
+    private static final String testFileLocation = Path.of("src/test/resources/troubleshoot/strandDump")
             .toAbsolutePath().toString();
     private static final String JAVA_OPTS = "JAVA_OPTS";
     private static final int TIMEOUT = 60000;
     private BMainInstance bMainInstance;
 
     @BeforeClass
-    public void setup() throws BallerinaTestException {
+    public void setup() {
         bMainInstance = new BMainInstance(balServer);
     }
 
     @Test
     public void testStrandDumpOfBalPackage() throws BallerinaTestException {
-        Path expectedOutputFilePath = Paths.get(testFileLocation, "testOutputs",
+        Path expectedOutputFilePath = Path.of(testFileLocation, "testOutputs",
                 "testPackageWithModulesStrandDumpRegEx.txt");
-        Path steadyStateOutputFilePath = Paths.get(testFileLocation, "testOutputs",
+        Path steadyStateOutputFilePath = Path.of(testFileLocation, "testOutputs",
                 "testPackageWithModulesSteadyState.txt");
         String sourceRoot = testFileLocation + "/";
         String packageName = "testPackageWithModules";
         Map<String, String> envProperties = new HashMap<>();
-        bMainInstance.addJavaAgents(envProperties);
         bMainInstance.runMain("build", new String[]{packageName}, envProperties, null, null, sourceRoot);
 
-        String jarPath = Paths.get(Paths.get(sourceRoot, packageName).toString(), "target", "bin",
+        String jarPath = Path.of(Path.of(sourceRoot, packageName).toString(), "target", "bin",
                 packageName + ".jar").toFile().getPath();
         runJarAndVerifyStrandDump(envProperties, jarPath, sourceRoot, expectedOutputFilePath,
                 steadyStateOutputFilePath);
@@ -82,8 +79,8 @@ public class StrandDumpTest extends BaseTest {
             return;
         }
 
-        Path expectedOutputFilePath = Paths.get(testFileLocation, "testOutputs", "balTestStrandDumpRegEx.txt");
-        Path steadyStateOutputFilePath = Paths.get(testFileLocation, "testOutputs", "balTestSteadyState.txt");
+        Path expectedOutputFilePath = Path.of(testFileLocation, "testOutputs", "balTestStrandDumpRegEx.txt");
+        Path steadyStateOutputFilePath = Path.of(testFileLocation, "testOutputs", "balTestSteadyState.txt");
         String sourceRoot = testFileLocation + "/";
         String packageName = "testPackageWithModules";
         Map<String, String> envProperties = new HashMap<>();
@@ -97,22 +94,21 @@ public class StrandDumpTest extends BaseTest {
 
     @Test
     public void testStrandDumpOfSingleBalFile() throws BallerinaTestException {
-        Path expectedOutputFilePath = Paths.get(testFileLocation, "testOutputs", "balProgram1StrandDumpRegEx.txt");
-        Path steadyStateOutputFilePath = Paths.get(testFileLocation, "testOutputs", "balProgram1SteadyStateOutput.txt");
+        Path expectedOutputFilePath = Path.of(testFileLocation, "testOutputs", "balProgram1StrandDumpRegEx.txt");
+        Path steadyStateOutputFilePath = Path.of(testFileLocation, "testOutputs", "balProgram1SteadyStateOutput.txt");
         String commandDir = balServer.getServerHome();
         String balFile = testFileLocation + "/singleBalFiles/balProgram1.bal";
         Map<String, String> envProperties = new HashMap<>();
-        bMainInstance.addJavaAgents(envProperties);
         bMainInstance.runMain("build", new String[]{balFile}, envProperties, null, null, commandDir);
 
-        String balFileName = Paths.get(balFile).getFileName().toString();
-        String jarPath = Paths.get(Paths.get(commandDir).toString(),
+        String balFileName = Path.of(balFile).getFileName().toString();
+        String jarPath = Path.of(Path.of(commandDir).toString(),
                 balFileName.substring(0, balFileName.length() - 4) + ".jar").toString();
         runJarAndVerifyStrandDump(envProperties, jarPath, commandDir, expectedOutputFilePath,
                 steadyStateOutputFilePath);
     }
 
-    private static void runJarAndVerifyStrandDump(Map<String, String> envProperties, String jarPath, String commandDir,
+    private void runJarAndVerifyStrandDump(Map<String, String> envProperties, String jarPath, String commandDir,
                                            Path expectedStrandDumpFilePath, Path steadyStateOutputFilePath)
             throws BallerinaTestException {
         if (Utils.isWindowsOS()) {
@@ -120,10 +116,9 @@ public class StrandDumpTest extends BaseTest {
         }
 
         List<String> runCmdSet = new ArrayList<>();
+        bMainInstance.addJavaAgents(envProperties);
         runCmdSet.add("java");
-        if (envProperties.containsKey(JAVA_OPTS)) {
-            runCmdSet.add(envProperties.get(JAVA_OPTS).trim());
-        }
+        runCmdSet.add(envProperties.get(JAVA_OPTS).trim());
         String tempBalHome = new File("src" + File.separator + "test" + File.separator +
                 "resources" + File.separator + "ballerina.home").getAbsolutePath();
         runCmdSet.add("-Dballerina.home=" + tempBalHome);
@@ -134,10 +129,9 @@ public class StrandDumpTest extends BaseTest {
                 steadyStateOutputFilePath, true);
     }
 
-    private static void startProcessAndVerifyStrandDump(ProcessBuilder processBuilder,
-                                                        Map<String, String> envProperties,
-                                                        Path expectedOutputFilePath, Path steadyStateOutputFilePath,
-                                                        boolean isJar) throws BallerinaTestException {
+    private void startProcessAndVerifyStrandDump(ProcessBuilder processBuilder, Map<String, String> envProperties,
+                                                 Path expectedOutputFilePath, Path steadyStateOutputFilePath,
+                                                 boolean isJar) throws BallerinaTestException {
 
         Map<String, String> env = processBuilder.environment();
         for (Map.Entry<String, String> entry : envProperties.entrySet()) {
@@ -152,12 +146,12 @@ public class StrandDumpTest extends BaseTest {
             List<LogLeecher> strandDumpLeechers = new ArrayList<>();
             populateLeechers(strandDumpLeechers, expectedOutputFilePath, serverInfoLogReader);
             serverInfoLogReader.start();
-            waitForLeechers(steadyStateLeechers);
+            bMainInstance.waitForLeechers(steadyStateLeechers, TIMEOUT);
             Thread.sleep(1000);
             long balProcessID = isJar ? process.pid()
                     : process.children().findFirst().get().children().findFirst().get().pid();
             Runtime.getRuntime().exec("kill -SIGTRAP " + balProcessID);
-            waitForLeechers(strandDumpLeechers);
+            bMainInstance.waitForLeechers(strandDumpLeechers, TIMEOUT);
             Runtime.getRuntime().exec("kill -SIGINT " + balProcessID);
             process.waitFor();
             serverInfoLogReader.stop();
@@ -177,15 +171,9 @@ public class StrandDumpTest extends BaseTest {
         }
     }
 
-    private static void waitForLeechers(List<LogLeecher> logLeechers) throws BallerinaTestException {
-        for (LogLeecher leecher : logLeechers) {
-            leecher.waitForText(TIMEOUT);
-        }
-    }
-
     private static List<String> readFileNonEmptyLines(Path filePath) throws BallerinaTestException {
         try (Stream<String> fileLines = Files.lines(filePath)) {
-            return fileLines.filter(s -> !s.isBlank()).collect(Collectors.toList());
+            return fileLines.filter(s -> !s.isBlank()).toList();
         } catch (IOException e) {
             throw new BallerinaTestException("Failure to read from the file: " + filePath);
         }
